--- a/_posts/2009-11-27-2-04100.md
+++ b/_posts/2009-11-27-2-04100.md
@@ -70,7 +70,7 @@ The implication was clear: it wasn't Wu De's concern. He nodded. Just then, [Wen
 
 ***
 
-After the disastrous failure of the county's two-pronged counterattack, tension once again gripped Lingao. The returning militiamen spoke of the pirates' terrifyingly powerful firearms, which could kill swathes of men with a single volley. Even the renowned militia of the Huang Family Village had been crushed, and their leader, Huang Shoutong, was seriously wounded and carried back to his village. Panic spread through the town. Some of the gentry began moving valuables and family members to relatives in remote areas or to their own fortified manors. Others feigned illness or urgent family matters and fled home. Even the refugees who had sought shelter in the town now wanted to leave, fearing the short-haired pirates would come to sack the city in revenge.
+After the disastrous failure of the county's two-pronged counterattack, tension once again gripped Lingao. The returning militiamen spoke of the pirates' terrifyingly powerful firearms, which could kill swathes of men with a single volley. Even the renowned militia of the Huang Family Village had been crushed, and their leader, Huang Shoutong, was seriously wounded and carried back to his village. Panic spread through the town. Some of the gentry began moving valuables and family members to relatives in remote areas or to their own fortified manors. Others feigned illness or urgent family matters and fled home. Even the refugees who had sought shelter in the town now wanted to leave, fearing the kūnzéi pirates would come to sack the city in revenge.
 
 After a few days, when it became clear the "Kun" bandits had no intention of attacking, the officials and gentry breathed a collective sigh of relief. The heavy losses, however, sparked internal squabbles. The ignominious failure of the supposedly perfect plan proved that Scholar Liu's strategy was useless. Rumors spread that he was an armchair general, misleading both the court and the local populace. The gossip infuriated the already frail Liu Dalin, who had worked tirelessly for a month only to end up like this. Citing his poor health, he retired to his home to recuperate.
 
