--- a/_posts/2009-12-14-2-05800.md
+++ b/_posts/2009-12-14-2-05800.md
@@ -82,7 +82,7 @@ Xi Yazhou already understood a little of the Lingao dialect. Combined with his e
 
 Zhang Xingjiao translated the words. The other party's replies were sometimes cold, sometimes sarcastic, and sometimes indignant. Regardless of the strong man's attitude, Xi Yazhou always maintained the most sincere smile and spoke very politely. After several rounds of back and forth, they finally began to understand the whole story.
 
-It turned out that a few days ago, this Landlord Gou had come to the salt village and declared that the "short-haired masters" of Bairen Beach had entrusted him to collect two hundred *yin* of salt. He also threatened the village: the short-haired masters had powerful firearms and would send troops to slaughter everyone if they didn't comply. The story of the battle at Bairen Beach had long since been embellished and spread here. In addition, [Wang Luobin][y003] had indeed come to buy salt a few days ago. Now, with Landlord Gou's words, the already struggling salt workers became even more desperate. More than ten households fled at once, and a cloud of gloom hung over the village. Fearing that everyone would run away, Landlord Gou simply arrested the village chief and the clan elders, coercing them not to flee.
+It turned out that a few days ago, this Landlord Gou had come to the salt village and declared that the "kūnzéi masters" of Bairen Beach had entrusted him to collect two hundred *yin* of salt. He also threatened the village: the kūnzéi masters had powerful firearms and would send troops to slaughter everyone if they didn't comply. The story of the battle at Bairen Beach had long since been embellished and spread here. In addition, [Wang Luobin][y003] had indeed come to buy salt a few days ago. Now, with Landlord Gou's words, the already struggling salt workers became even more desperate. More than ten households fled at once, and a cloud of gloom hung over the village. Fearing that everyone would run away, Landlord Gou simply arrested the village chief and the clan elders, coercing them not to flee.
 
 "Outrageous!" [Wang Luobin][y003] almost slammed the table. "Shameless!" All the transmigrators present were shocked. This local tyrant, whom they only knew about from Zhang Xingjiao, actually had such methods!
 
