--- a/_posts/2009-12-15-2-05900.md
+++ b/_posts/2009-12-15-2-05900.md
@@ -62,7 +62,7 @@ To ask the common people to confront the government, in any form, was tantamount
 
 "In the end, the Gou family is so rampant for two reasons: they keep thugs, and they collude with the government," Xi Yazhou said with a slight smile. "The first reason is insignificant. As long as everyone can unite, his few men are not even enough to fill the gaps between our teeth. The key is the second reason. Since he can collude with the government, so can we."
 
-The people from the salt village stared dumbfounded at this short-haired "sea merchant leader," probably finding it incredible. After a moment, Tan Guihuang cautiously said, "Does the master also know people in the government?"
+The people from the salt village stared dumbfounded at this kūnzéi "sea merchant leader," probably finding it incredible. After a moment, Tan Guihuang cautiously said, "Does the master also know people in the government?"
 
 "To be honest, no."
 
