--- a/_posts/2009-12-16-2-06000.md
+++ b/_posts/2009-12-16-2-06000.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 Xi Yazhou, however, was full of confidence. "Dealing with the government is our business. You don't need to worry." In fact, he had a plan long ago—we can't win against the ancients by playing mind games and plotting; we can only break through with force.
 
-The people of the salt village looked at each other, seemingly in disbelief. But these short-haired masters before them were no saints. They had defeated several hundred militiamen at Bairen Beach; perhaps they could really pull it off. Xi Yazhou was in no hurry to prove anything. He just asked, "If we take back the salt tax, can everyone's hearts be united? When that time comes, the two old Gou brothers will definitely not be willing to give up and will come to make trouble—"
+The people of the salt village looked at each other, seemingly in disbelief. But these kūnzéi masters before them were no saints. They had defeated several hundred militiamen at Bairen Beach; perhaps they could really pull it off. Xi Yazhou was in no hurry to prove anything. He just asked, "If we take back the salt tax, can everyone's hearts be united? When that time comes, the two old Gou brothers will definitely not be willing to give up and will come to make trouble—"
 
 "What's there to be afraid of?" Tan Chengqing said with a shrug of his shoulders, very confidently. "With his few men, any of the young and strong men in the village can handle two or three of them!"
 
@@ -74,7 +74,7 @@ The next morning, there was some life in the village. The members of the work te
 
 The sun shone on the churning sea, reflecting a mottled, sparkling light. This unremarkable new day, for the residents of the saltworks, meant the beginning of a new era.
 
-Outside the ruined walls of the Ge Hong Temple, curious children gathered. Unlike the suspicious adults, these short-haired people who brought sweet and sour candy balls seemed to them like people from another world. They watched with rapt attention as these people worked with strange tools. Their things all looked so exquisite and luxurious—even a single candy ball was wrapped in colorful, transparent paper. Since last night, the children had spontaneously started a craze for collecting fruit candy wrappers. Every time a short-haired person walked by, everyone would hold their breath, watching to see if he would take out a candy ball. They would stare intently at the lucky one, watching him eagerly pop the candy into his mouth and clutch the wrapper in his hand as if it were a treasure.
+Outside the ruined walls of the Ge Hong Temple, curious children gathered. Unlike the suspicious adults, these kūnzéi people who brought sweet and sour candy balls seemed to them like people from another world. They watched with rapt attention as these people worked with strange tools. Their things all looked so exquisite and luxurious—even a single candy ball was wrapped in colorful, transparent paper. Since last night, the children had spontaneously started a craze for collecting fruit candy wrappers. Every time a kūnzéi person walked by, everyone would hold their breath, watching to see if he would take out a candy ball. They would stare intently at the lucky one, watching him eagerly pop the candy into his mouth and clutch the wrapper in his hand as if it were a treasure.
 
 "These children can all be our new blood in the future," [Wang Luobin][y003] said to Xi Yazhou. Seeing these sallow, emaciated, half-naked children, the idea of the first comprehensive industrial and technical school, which he had envisioned for a long time, came to mind again.
 
