--- a/_posts/2009-12-17-2-06100.md
+++ b/_posts/2009-12-17-2-06100.md
@@ -10,7 +10,7 @@ While they were busy, a ship was seen sailing through the waves from a distance 
 
 The salt workers on the beach, however, panicked, dropped their tools, and ran chaotically towards the village. The seas were not peaceful in these times. Every ship coming from the sea could be an enemy.
 
-Zhang Xingjiao, being more worldly, stood at the village entrance with the Tan father and son to reassure everyone. "It's the ship of those short-haired masters, it's fine."
+Zhang Xingjiao, being more worldly, stood at the village entrance with the Tan father and son to reassure everyone. "It's the ship of those kūnzéi masters, it's fine."
 
 The transmigrators, however, were very happy. This was the first time in over two months that they had seen their own ship sailing on the sea. The Executive Committee had dispatched a ship that was not easily mobilized, showing the importance they attached to this mission. No one wanted to work in a position that was not valued.
 
@@ -64,7 +64,7 @@ Before Zhang Xingjiao could finish translating, another cheer erupted from the c
 
 "We have plenty of strength! Salt, we can produce as much as you want!" Led by the Tan father and son and a few others around them, the crowd was stirred into a frenzy.
 
-Seeing the enthusiastic atmosphere, Zhang Xingjiao, as instructed by Chief Xi, quickly stood up. "Fellow villagers! I am Zhang Xingjiao, also a native of this place, and I have studied for a few years. In the past, I was brutally deprived of my house and land by Landlord Gou, and in the end, even my ancestral grave was dug up by him. I was bullied to the point where I couldn't live..." When he spoke of his painful past, he kept wiping his eyes with his sleeve, and the crowd below also sighed in sympathy. "Landlord Gou destroyed my family and left everyone without clothes or food," he wiped his eyes and shouted in a hoarse voice, "The short-haired masters have come, they give us food and clothing, help us with production. If anyone comes to bother us again, if anyone comes to take advantage of us again—"
+Seeing the enthusiastic atmosphere, Zhang Xingjiao, as instructed by Chief Xi, quickly stood up. "Fellow villagers! I am Zhang Xingjiao, also a native of this place, and I have studied for a few years. In the past, I was brutally deprived of my house and land by Landlord Gou, and in the end, even my ancestral grave was dug up by him. I was bullied to the point where I couldn't live..." When he spoke of his painful past, he kept wiping his eyes with his sleeve, and the crowd below also sighed in sympathy. "Landlord Gou destroyed my family and left everyone without clothes or food," he wiped his eyes and shouted in a hoarse voice, "The kūnzéi masters have come, they give us food and clothing, help us with production. If anyone comes to bother us again, if anyone comes to take advantage of us again—"
 
 "That goes without saying!" the young men roared in anger. "If that bastard Landlord Gou comes again, we'll smash his dog head!"
 
