--- a/_posts/2009-12-21-2-06500.md
+++ b/_posts/2009-12-21-2-06500.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 A guide was quickly found, a local peddler. Gou Family Village wasn't exactly Mordor; besides the few devilish households of the Gou family, most residents were ordinary people who needed daily necessities like needles and thread. Where there was demand, there was supply. Of course, doing business in Gou Family Village required some courage. It was considered normal to get robbed by the former professional criminals who were now the family's retainers if your luck was bad, and it wasn't out of the question to get a beating. Lin Quan'an was one of the very few peddlers who dared to do business in Gou Family Village. The reason was simple: since almost no one else dared to go, prices were a bit higher and demand was stronger. This showed that Lin Quan'an was a very courageous man—he was also the first person to sell goods at the free market in Bairen City.
 
-Although the urban plan for Bairen City had long designated a plot for a free market, no one had come to trade. While traveling from village to village, Lin Quan'an heard that the "short-haired pirates" had put out the word: anyone who wanted to do business or work as a short-term laborer at Bairen Beach was welcome. Of course, this didn't have much effect at first, but it gave Lin Quan'an an idea. He specifically sought out a few laborers who had returned from Bairen Beach and asked them in detail about the situation there, coming to a conclusion:
+Although the urban plan for Bairen City had long designated a plot for a free market, no one had come to trade. While traveling from village to village, Lin Quan'an heard that the "kūnzéi pirates" had put out the word: anyone who wanted to do business or work as a short-term laborer at Bairen Beach was welcome. Of course, this didn't have much effect at first, but it gave Lin Quan'an an idea. He specifically sought out a few laborers who had returned from Bairen Beach and asked them in detail about the situation there, coming to a conclusion:
 
 This group of "short hairs" wasn't leaving anytime soon. The reason was simple: they were frantically building houses, which strongly suggested they intended to settle down there.
 
@@ -62,7 +62,7 @@ At this point, they were less than three or four li from the village. Xue Zilian
 
 After marking the height of the walls, the towers, and the sentry posts on the map, Xue Ziliang made up his mind to go in and see for himself. No matter how much reconnaissance technology had advanced, on-the-ground reconnaissance was always the most accurate source of intelligence.
 
-He turned and ordered Lin Quan'an to lead him into the village. This command terrified Lin Quan'an. Leading the way was one thing, but bringing this tall, imposing "short-haired" devil into Gou Family Village... if anything went wrong, neither of Lingao's two major gangs would spare him. He was about to kneel and beg for mercy when Wang Ruixiang, who was guarding him, pulled out his axe. The gleaming axe flashed before his eyes as Wang asked him if he wanted "board-knife noodles" or "wonton noodles"—truly the nature of a pirate. Lin Quan'an had no choice but to obediently stand up.
+He turned and ordered Lin Quan'an to lead him into the village. This command terrified Lin Quan'an. Leading the way was one thing, but bringing this tall, imposing "kūnzéi" devil into Gou Family Village... if anything went wrong, neither of Lingao's two major gangs would spare him. He was about to kneel and beg for mercy when Wang Ruixiang, who was guarding him, pulled out his axe. The gleaming axe flashed before his eyes as Wang asked him if he wanted "board-knife noodles" or "wonton noodles"—truly the nature of a pirate. Lin Quan'an had no choice but to obediently stand up.
 
 "Listen, I can speak Minnan dialect!" Xue Ziliang said. "Just say I'm from your hometown and I'm here to help you."
 
