--- a/_posts/2009-12-22-2-06600.md
+++ b/_posts/2009-12-22-2-06600.md
@@ -6,7 +6,7 @@ path: 2009-12-22-2-06600.md
 tag: [normal]
 ---
 
-Lin Quan'an, forced into a corner, realized that the "short-haired" masters' money wasn't so easy to earn. He said, "Your honorable accent is still a bit strange. It would be best to speak as little as possible once we're inside."
+Lin Quan'an, forced into a corner, realized that the "kūnzéi" masters' money wasn't so easy to earn. He said, "Your honorable accent is still a bit strange. It would be best to speak as little as possible once we're inside."
 
 Arriving at the front of the village, the main gate was open, with cheval de frise placed in front. Several militiamen stood guard, and others kept watch from the watchtower. The defense was reasonably tight. As Lin Quan'an was familiar with the locals, he exchanged a few greetings, slipped them some small items, and then led Xue Ziliang inside.
 
@@ -50,7 +50,7 @@ Ye Mengyan got a little nervous and quickly crawled over to ask Xue Ziliang, "Ca
 
 Xue Ziliang nodded. It was obvious this was an important person from Gou Family Village, perhaps even Gou the Elder himself. Besides the guide, they had four men, giving them a considerable chance of success.
 
-He pondered for a moment, his gaze falling on Lin Quan'an, which made the peddler jump—every time this "short-haired" master looked at him like that, it meant trouble. Sure enough, Xue Ziliang called him over again.
+He pondered for a moment, his gaze falling on Lin Quan'an, which made the peddler jump—every time this "kūnzéi" master looked at him like that, it meant trouble. Sure enough, Xue Ziliang called him over again.
 
 The person in the sedan chair was none other than the second master of the Gou family, Gou Xunli, the head of the Lingao County underworld who lived in the city. He had recently received news that the pirates from Bairen Beach had arrived at the Ma Niao saltworks. Gou Xunli had read some books, dealt with government officials in the county town, and monopolized lawsuits for many years, so he was quite knowledgeable. He knew that the Ma Niao saltworks was a major source of revenue for the county, and his elder brother, Gou Xunyi, had spent a lot of effort to get it under control. The Kun bandits sending a small team to the saltworks was undoubtedly to snatch this piece of fat meat. A few days ago, he heard from people in the yamen that the Kun bandits had sent someone to see Advisor Wang and had demanded to take over the salt tax collection. Gou the Second knew things were not looking good and quickly ordered his sedan chair to return to the village—a countermeasure had to be devised as soon as possible.
 
