--- a/_posts/2009-12-26-2-07000.md
+++ b/_posts/2009-12-26-2-07000.md
@@ -38,7 +38,7 @@ The person in charge was a veteran from the military group. With a gloomy face, 
 
 As they were talking, someone came to report that a dungeon had been discovered behind the livestock shed in the backyard. Just as Wu De reached the entrance, he saw several transmigrators leading a group of people out. Some were in shackles, some had iron chains around their necks, and some had their hands tied with ropes. All were sallow and emaciated, staggering in the sunlight. Upon asking, he learned that these people all owed rent and high-interest loans to the great households of the Gou family. Unable to repay, they had been captured by Gou Xunyi's militiamen and retainers and thrown into his private jail. Others had been imprisoned for offending him in other ways. Remembering that Xi Yazhou had specifically told him that several elders from Saltworks Village were being held by the Gou family, he had someone ask if there was anyone from Saltworks Village.
 
-Hearing the question, several old men in the group knelt down and kowtowed repeatedly. Wu De hurried over to help them up. As he got closer, he noticed a foul stench coming from them, but since he was already there, he couldn't shrink back. He braced himself, helped them up, and told them it was alright, that people from Saltworks Village would come to get them soon. For a moment, these old men couldn't figure out what was going on. Village head Tan Guirong was quicker on the uptake. Seeing their appearance and attire, he remembered the "short-haired" Chief Xi who had come to buy salt from him the other day. He suddenly understood and quickly knelt down to kowtow:
+Hearing the question, several old men in the group knelt down and kowtowed repeatedly. Wu De hurried over to help them up. As he got closer, he noticed a foul stench coming from them, but since he was already there, he couldn't shrink back. He braced himself, helped them up, and told them it was alright, that people from Saltworks Village would come to get them soon. For a moment, these old men couldn't figure out what was going on. Village head Tan Guirong was quicker on the uptake. Seeing their appearance and attire, he remembered the "kūnzéi" Chief Xi who had come to buy salt from him the other day. He suddenly understood and quickly knelt down to kowtow:
 
 "Are you... sent by Chief... Chief Xi?"
 
