--- a/_posts/2009-12-29-2-07300.md
+++ b/_posts/2009-12-29-2-07300.md
@@ -16,7 +16,7 @@ This master of the family was panting with anxiety, but couldn't make a sound, h
 
 Seeing this scene, Gou Buli was very pleased. He struck while the iron was hot and roared at the middle-aged man, "What are you staring at me for! With upright masters like the 'short hairs' to stand up for us common people, I'm not afraid of a villain like you! The days of your Gou family shitting and pissing on the heads of us common people are over."
 
-As he spoke, he pulled up his sleeve, took off his shirt, and revealed the many new and old torture scars on his body. "Fellow villagers, this year I was roasting a sweet potato to eat under the kitchen when this old thing saw me and said I was stealing their horse feed. I said, 'Your horse feed is all golden millet and beans, where would I find such coarse food to steal?' Just for that sentence, he went and reported me to Gou Xunyi. I was taken to the earthen jail and tortured to within an inch of my life, and then locked up there. If it weren't for the 'short-haired' masters opening the jail door, I would have died in there for nothing—" As he spoke, he probably recalled the various hardships of being locked in the earthen jail, and shed tears at just the right moment.
+As he spoke, he pulled up his sleeve, took off his shirt, and revealed the many new and old torture scars on his body. "Fellow villagers, this year I was roasting a sweet potato to eat under the kitchen when this old thing saw me and said I was stealing their horse feed. I said, 'Your horse feed is all golden millet and beans, where would I find such coarse food to steal?' Just for that sentence, he went and reported me to Gou Xunyi. I was taken to the earthen jail and tortured to within an inch of my life, and then locked up there. If it weren't for the 'kūnzéi' masters opening the jail door, I would have died in there for nothing—" As he spoke, he probably recalled the various hardships of being locked in the earthen jail, and shed tears at just the right moment.
 
 By now, the audience below was a sea of tears. Although Wu De was happy with this effect, he knew that what Gou Buli was saying was a mix of truth and lies. He whispered to Xi Yazhou, "Isn't this a bit too hypocritical?"
 
@@ -34,7 +34,7 @@ The maid who wanted to see him was named Chu Yu. She was originally the personal
 
 After some thought, she remembered that she had been sold in this county by a family fleeing famine. After being sold several times, she ended up as a maid in the Gou family. Although she was the seventh concubine's personal maid, this seventh concubine was spoiled and extremely harsh to her servants, beating and scolding them at the slightest displeasure. For Chu Yu, every day by her side was like a year. She was all alone in the world, with no ties. She had originally hoped to be married off to a servant or farmhand to live a peaceful life, but she never expected that the maids of the Gou family never married. Some maids were still unmarried at the age of forty or fifty, which shattered her last bit of hope.
 
-With the Gou family fallen, she had to plan for her own future. She thought that these "short hairs" had always prided themselves on their benevolence. After breaking the stockade, they didn't loot or kill indiscriminately, and were very polite to women. They even specially assigned a female "short-haired" supervisor to guard them, who was not only kind-hearted but also meticulous. She and the other servants were not important people. In a few days, they would most likely be told to go home. She had no home to return to, so she had to find a way out for herself. After much thought, she decided to offer a secret she knew as a gift. Having made up her mind, she took the opportunity of needing to use the latrine to quietly report it to Du Wen, who was in charge of guarding them, in a corner of the courtyard.
+With the Gou family fallen, she had to plan for her own future. She thought that these "short hairs" had always prided themselves on their benevolence. After breaking the stockade, they didn't loot or kill indiscriminately, and were very polite to women. They even specially assigned a female "kūnzéi" supervisor to guard them, who was not only kind-hearted but also meticulous. She and the other servants were not important people. In a few days, they would most likely be told to go home. She had no home to return to, so she had to find a way out for herself. After much thought, she decided to offer a secret she knew as a gift. Having made up her mind, she took the opportunity of needing to use the latrine to quietly report it to Du Wen, who was in charge of guarding them, in a corner of the courtyard.
 
 Du Wen had been planning the mass meeting for a long time and was feeling frustrated that she couldn't go and watch. Suddenly, an "oppressed class sister" was willing to come forward and expose something. It couldn't have been more to her liking. She was about to ask her to speak up, but this Chu Yu was stubbornly insistent on only speaking to the "person in charge."
 
@@ -70,7 +70,7 @@ The implication was: the work I did was worth the wages I received. Now that the
 
 Wu De nodded to himself in approval and then said, "Chu Yu, raise your head."
 
-Chu Yu boldly raised her head, allowing Wu De to see her face clearly. She also took the opportunity to glance at him. She saw that this "short-haired" master who had breached the stockade was in his middle age, with regular features, a pair of thick eyebrows, bright eyes, dark skin, and a strong, powerful body. Her heart skipped a beat, and, afraid of his direct gaze, she lowered her head again.
+Chu Yu boldly raised her head, allowing Wu De to see her face clearly. She also took the opportunity to glance at him. She saw that this "kūnzéi" master who had breached the stockade was in his middle age, with regular features, a pair of thick eyebrows, bright eyes, dark skin, and a strong, powerful body. Her heart skipped a beat, and, afraid of his direct gaze, she lowered her head again.
 
 At first glance, Wu De saw that Chu Yu looked like a girl of only eighteen or nineteen, who would still be a high school student in the modern world. Yet, there was an air of calm composure about her. He asked:
 
