--- a/_posts/2010-1-13-2-08800.md
+++ b/_posts/2010-1-13-2-08800.md
@@ -62,7 +62,7 @@ At the end of the corridor was a large pool of water separated by wooden planks,
 
 Before they could catch their breath, a team of temporary workers from the health group, personally commanded by Shi Niaoren, all burly and strong, were already on the shore. They dragged the people over to a row of long benches like chickens. Each bench could seat ten people. Above it was a rack with long wooden cangues, like those used for prisoners in the yamen. Once closed, the ten people were as immobile as chickens and ducks hanging on a rack in a slaughterhouse. The people who had just climbed out, choking on water and disoriented, were then put into the wooden cangues. They were scared out of their wits—what law had they broken to be publicly displayed in a cangue without a word being said?
 
-Because the "short-haired" masters were present, the temporary workers were all quick and rough. In a moment, all five rows of seats were filled with people in cangues. It was quite a spectacular sight. Some of the younger children, not knowing what was happening, immediately started crying. At this moment, the screams and cries of girls could be heard from the other side of the wooden partition. Tian Sanwu couldn't help but think of Guo Sanniang—what was happening to her?
+Because the "kūnzéi" masters were present, the temporary workers were all quick and rough. In a moment, all five rows of seats were filled with people in cangues. It was quite a spectacular sight. Some of the younger children, not knowing what was happening, immediately started crying. At this moment, the screams and cries of girls could be heard from the other side of the wooden partition. Tian Sanwu couldn't help but think of Guo Sanniang—what was happening to her?
 
 "They're going to give us a 'welcoming beating'—" a boy next to Tian Sanwu said, trembling, water dripping continuously from his messy hair.
 
