--- a/_posts/2010-1-15-2-09000.md
+++ b/_posts/2010-1-15-2-09000.md
@@ -28,7 +28,7 @@ Tian Liang often wanted to go to the girls' dormitory to see how Guo Fu was doin
 
 Ma Peng pushed a small wheelbarrow, which creaked along the path between the fields. On the wheelbarrow were the only belongings of his family and his old mother.
 
-"Peng'er, if we just go like this, will the 'short-haired' masters take us in?"
+"Peng'er, if we just go like this, will the 'kūnzéi' masters take us in?"
 
 "Mother, how many times have I told you, they will take in as many family members and relatives as come. Chief Wu said so himself."
 
@@ -38,7 +38,7 @@ Ma Peng pushed a small wheelbarrow, which creaked along the path between the fie
 
 As they were talking, another group of people carrying loads on shoulder poles came from behind. They were all carrying baskets of unhusked rice, the poles trembling under the weight, hurrying towards Bairen City.
 
-"Mother, look, these are all people going to Dongmen Market to sell grain. The 'short-haired' chiefs' money is truly more than the water in the sea." Ma Peng smacked his lips with a bit of pride, feeling that being a long-term laborer for the "short hairs" was much more respectable than working for the rural landlord Fu Bu'er.
+"Mother, look, these are all people going to Dongmen Market to sell grain. The 'kūnzéi' chiefs' money is truly more than the water in the sea." Ma Peng smacked his lips with a bit of pride, feeling that being a long-term laborer for the "short hairs" was much more respectable than working for the rural landlord Fu Bu'er.
 
 Just as he was speaking, the leader of the group carrying loads turned his head. "Little brother, are you also going to Dongmen Market? Taking your old mother to see the sights?"
 
@@ -54,7 +54,7 @@ The man nodded. "That's right. Just like our master. At first, he was scared to 
 
 "The rich are just obsessed with money."
 
-As they spoke, the group had already arrived at Dongmen Market. In just half a month, this place had become bustling with activity. In the middle of a large area of bamboo sheds stood a towering red brick building, which was very conspicuous. People selling grain with shoulder poles and carts formed a long queue here. On the other side was the shop of some "welfare cooperative" that had recently become famous throughout the county. The entrance was also crowded with people. Besides the common people, there were also some who looked like landlords and wealthy men looking at the goods and bargaining with the women in pretty blue cloth clothes. Ma Peng had been away from here for almost a month, and now everything seemed new to him. He felt more and more that he had made the right decision to come back. The "short-haired" chiefs were not leaving!
+As they spoke, the group had already arrived at Dongmen Market. In just half a month, this place had become bustling with activity. In the middle of a large area of bamboo sheds stood a towering red brick building, which was very conspicuous. People selling grain with shoulder poles and carts formed a long queue here. On the other side was the shop of some "welfare cooperative" that had recently become famous throughout the county. The entrance was also crowded with people. Besides the common people, there were also some who looked like landlords and wealthy men looking at the goods and bargaining with the women in pretty blue cloth clothes. Ma Peng had been away from here for almost a month, and now everything seemed new to him. He felt more and more that he had made the right decision to come back. The "kūnzéi" chiefs were not leaving!
 
 He parted ways with the group that had come to sell grain—Ma Peng was heading to the production team's camp on the bank of the Wenlan River outside the South Gate. As he passed a plot of land for housing, many people he had never seen before were setting up scaffolding and building houses. The houses were completely different from what he had seen in the past. They were not made of bamboo or wood, nor were they made of rammed earth. The houses were built with bright red bricks. Ma Peng had never dreamed that this would be their home.
 
