--- a/_posts/2010-1-18-2-09300.md
+++ b/_posts/2010-1-18-2-09300.md
@@ -68,6 +68,6 @@ Soon, this news spread throughout the production team. Every day after work, som
 
 However, the main reason he quit his job at Fu Bu'er's house after returning for the busy farming season, besides the good food here with the "short hairs," was that he found he could no longer get used to the bites of fleas and bedbugs, the dark and dilapidated houses, the turbid water... Although it was not a life of luxury with the "short hairs," these most ordinary things in their daily lives were unattainable in his past life.
 
-Now Ma Peng works at the brick and tile factory, digging and sifting earth every day. The rumbling sound of the machines no longer makes him curious or surprised. There are no longer "short-haired" guards with bayonets around him and his fellow workers, but their enthusiasm for labor is unprecedentedly high—they are adding bricks and tiles to their own houses. A new life, completely different from the past, is about to unfold.
+Now Ma Peng works at the brick and tile factory, digging and sifting earth every day. The rumbling sound of the machines no longer makes him curious or surprised. There are no longer "kūnzéi" guards with bayonets around him and his fellow workers, but their enthusiasm for labor is unprecedentedly high—they are adding bricks and tiles to their own houses. A new life, completely different from the past, is about to unfold.
 
 [y005]: /characters/y005 "Ma Qianzhu"
