--- a/_posts/2010-1-20-2-09500.md
+++ b/_posts/2010-1-20-2-09500.md
@@ -70,7 +70,7 @@ At this point, there was an uproar. Some laborers said, "2.5 work points. I only
 
 "You have to work for 12 months, or have outstanding performance."
 
-Ma Peng was originally not very keen on going, because he had heard that this job was similar to that of a yamen runner in the county yamen, responsible for catching thieves in the market. Firstly, he was afraid of dying, and secondly, he felt that this job was not respectable. But now his old mother was living with him. Although the "short-haired" master gave him an extra 1.5 work points per day according to the "support obligation" standard, his mother did not get free meals, so their life was a bit tight. Now there were rumors in the camp that the staff's wages were going to be raised. He regretted why he had listened to Fu Bu'er at that time and not become a staff member. Now he had to miss such an opportunity.
+Ma Peng was originally not very keen on going, because he had heard that this job was similar to that of a yamen runner in the county yamen, responsible for catching thieves in the market. Firstly, he was afraid of dying, and secondly, he felt that this job was not respectable. But now his old mother was living with him. Although the "kūnzéi" master gave him an extra 1.5 work points per day according to the "support obligation" standard, his mother did not get free meals, so their life was a bit tight. Now there were rumors in the camp that the staff's wages were going to be raised. He regretted why he had listened to Fu Bu'er at that time and not become a staff member. Now he had to miss such an opportunity.
 
 However, he still went to the commune office to apply the next day. Although he was not a staff member, Ran Yao saw that his physique was acceptable—it was really not easy to find a man over 160 cm tall—and nodded. After asking some questions, he was called to a small room in the back, stripped naked, measured with a ruler, and then stood on a wobbly platform scale. Finally, he was approved to join the native police force.
 
