--- a/_posts/2010-1-21-2-09600.md
+++ b/_posts/2010-1-21-2-09600.md
@@ -46,7 +46,7 @@ The merchants and people of Dongmen Market suddenly discovered that a screen wal
 
 In front of the screen wall was a three-tiered semi-circular high platform. This was the rostrum for holding public sentencing rallies. Public trial and sentencing had always been the most effective form of deterrence in the judicial system of the proletarian dictatorship, and this tradition could be preserved. Dugu Qiuhun eagerly hoped to erect a guillotine in the crossroads square, but the death penalty belonged to the state's judicial power. It seemed too early for the transmigrators to openly infringe on the court's power, and after all, this was just a market.
 
-At the same time as the screen wall, a group of strange people appeared: wearing rattan hats, short-haired style black stand-up collar short jackets with a front opening, wooden buttons, wide leather belts, white leggings, and straw sandals. A short wooden stick with a short cross-handle hung from their buttocks. On each person's sleeve was a shield-shaped embroidered cloth with some incomprehensible patterns. Only a few characters could be roughly recognized: "Public Security" on top, and "Dongmen Market" below.
+At the same time as the screen wall, a group of strange people appeared: wearing rattan hats, kūnzéi style black stand-up collar short jackets with a front opening, wooden buttons, wide leather belts, white leggings, and straw sandals. A short wooden stick with a short cross-handle hung from their buttocks. On each person's sleeve was a shield-shaped embroidered cloth with some incomprehensible patterns. Only a few characters could be roughly recognized: "Public Security" on top, and "Dongmen Market" below.
 
 "Damn, this is a spitting image of an Annam patrolman!" Dugu Qiuhun let out a desperate cry when he saw the clothing and equipment sent by the logistics department. The uniform he had originally designed for the police force was very beautiful: a peaked cap, a black lapel uniform, a leather Sam Browne belt, breeches, long boots, a badge on the chest, and a red armband on the sleeve—a spitting image of the SS.
 
