--- a/_posts/2010-1-4-2-07900.md
+++ b/_posts/2010-1-4-2-07900.md
@@ -34,9 +34,9 @@ Another important figure was Guo Yi. The main reason he was entrusted with this 
 
 In addition to more than a dozen transmigrators, some natives were also needed to accompany them. The people from the Bairen Beach production team who had returned sporadically were either locals from Lingao or Fujianese slash-and-burn farmers. Not to mention going to Guangzhou, many had never even been to Qiongzhou Prefecture. Among the prisoners captured after breaking the Gou family estate, there were some from Guangdong, but they had not yet passed the political review and could not be used rashly. In the end, a breakthrough was found in the salt farm village.
 
-Tan Guihuang, the deputy director of the village committee of the salt farm village, heard that the short-haired masters were looking for a few reliable people to go to Guangzhou with them, so he recommended Liu Gang, a salt merchant from Leizhou, to them.
+Tan Guihuang, the deputy director of the village committee of the salt farm village, heard that the kūnzéi masters were looking for a few reliable people to go to Guangzhou with them, so he recommended Liu Gang, a salt merchant from Leizhou, to them.
 
-Because of the salt trade, Liu Gang had a very good relationship with the salt farm village. When Tan Guihuang went across the sea to contact salt merchants to buy salt, he was the first to come, and he also brought the grain and cloth that the village urgently needed at that time. Tan Guihuang felt that this person was righteous and reliable. And although he had settled down in Leizhou, he was a native of Nanhai County, Guangzhou Prefecture, and often did business around Guangzhou, so he was familiar with the road conditions. It was most appropriate for him to accompany them. When Tan Guihuang told Liu Gang, he naturally agreed—he had to agree if he wanted to continue the salt trade in the salt farm village. He had also received news that this group of short-haired people was the backer of the salt farm village, and it was they who had dealt with the local tyrant Gou Da who controlled the salt farm. A salt merchant who was used to the ways of the world would not dare to offend such a force.
+Because of the salt trade, Liu Gang had a very good relationship with the salt farm village. When Tan Guihuang went across the sea to contact salt merchants to buy salt, he was the first to come, and he also brought the grain and cloth that the village urgently needed at that time. Tan Guihuang felt that this person was righteous and reliable. And although he had settled down in Leizhou, he was a native of Nanhai County, Guangzhou Prefecture, and often did business around Guangzhou, so he was familiar with the road conditions. It was most appropriate for him to accompany them. When Tan Guihuang told Liu Gang, he naturally agreed—he had to agree if he wanted to continue the salt trade in the salt farm village. He had also received news that this group of kūnzéi people was the backer of the salt farm village, and it was they who had dealt with the local tyrant Gou Da who controlled the salt farm. A salt merchant who was used to the ways of the world would not dare to offend such a force.
 
 The means of transportation was a boat, which was not only the fastest and most convenient, but also because the team was carrying a lot of things. In addition to the necessary dry food, weapons, and silver, there were also radios, hand-cranked generators, solar panels, and other items needed to build the Guangzhou intelligence station. There were also various samples of goods that they were preparing to find opportunities to sell in Guangzhou—the unsold goods that the Gou family had failed to sell were now their turn to handle.
 
