--- a/_posts/2010-1-5-2-08000.md
+++ b/_posts/2010-1-5-2-08000.md
@@ -18,7 +18,7 @@ On November 1, 1628, the sixth day of the tenth month of the first year of the C
 
 This imposing-sounding "third-class transport ship Dengyingzhou" was purely the wishful thinking of a group of people with strong naval sentiments. As for why it was a "third-class transport ship" and not a second- or fourth-class one, only they knew.
 
-The Dengyingzhou picked up Liu Gang at Denglong Cape in Xuwen. This small salt merchant also brought a few bodyguards and clerks. He was originally unwilling to go to Guangzhou by boat, preferring the safer land route. However, since he heard that the short-haired people's firearms were sharp, he was probably not afraid. It was just a little regrettable that he did not see the legendary great iron ship.
+The Dengyingzhou picked up Liu Gang at Denglong Cape in Xuwen. This small salt merchant also brought a few bodyguards and clerks. He was originally unwilling to go to Guangzhou by boat, preferring the safer land route. However, since he heard that the kūnzéi people's firearms were sharp, he was probably not afraid. It was just a little regrettable that he did not see the legendary great iron ship.
 
 The journey was uneventful, and five days later they arrived at the wharf outside the south city of Guangzhou.
 
