--- a/_posts/2010-1-6-2-08100.md
+++ b/_posts/2010-1-6-2-08100.md
@@ -50,7 +50,7 @@ He told Gao Ju his request. Gao Ju said that this was easy. He had his own wareh
 
 After the discussion was over, Gao Ju asked if they had brought any new Australian goods to Guangzhou this time. [Xiao Zishan][y001] just smiled slightly, "Those are just some small things. In a few more months, you will know, brother."
 
-These words gave Gao Ju infinite room for imagination, but also left him with some fear. From a personal point of view, he was not afraid of the short-haired man in front of him, but the faint and powerful force behind him made him uneasy. This group of Australian sea merchants was by no means as simple as merchants.
+These words gave Gao Ju infinite room for imagination, but also left him with some fear. From a personal point of view, he was not afraid of the kūnzéi man in front of him, but the faint and powerful force behind him made him uneasy. This group of Australian sea merchants was by no means as simple as merchants.
 
 The next person [Xiao Zishan][y001] visited was Sun Kecheng, the shopkeeper of the Qiwei Escort Agency. The escort agency had the ability to transport large quantities of goods over long distances and was a good helper in establishing land transportation lines.
 
