--- a/_posts/2010-10-23-3-18800.md
+++ b/_posts/2010-10-23-3-18800.md
@@ -92,7 +92,7 @@ These five hundred *jin* of red dates, even at the market price, were only worth
 
 The small merchant was instantly speechless. He hadn't expected these Australians, in their remote corner, to be so well-informed about the market in Guangzhou—the price of two and a half taels was exactly the retail price when he had bought them a month ago. His face changed color at once.
 
-Wu Yunhua was instantly furious. She flew into a rage and kicked the small swindler, who had been hoping to make a big profit off this "short-haired woman," sending him sprawling on his back. He couldn't get up for a moment. Wu Yunhua, not yet satisfied, jumped over to give him a good beating. The surrounding staff quickly held her back.
+Wu Yunhua was instantly furious. She flew into a rage and kicked the small swindler, who had been hoping to make a big profit off this "kūnzéi woman," sending him sprawling on his back. He couldn't get up for a moment. Wu Yunhua, not yet satisfied, jumped over to give him a good beating. The surrounding staff quickly held her back.
 
 With Wu Yunhua's physique, she would have beaten this thin little man half to death. Although the small merchant had tried to cheat, beating him for it would give them a reputation for being bullies and market tyrants, which would be very bad for their name.
 
