--- a/_posts/2010-11-14-3-21000.md
+++ b/_posts/2010-11-14-3-21000.md
@@ -28,7 +28,7 @@ Personally, everyone was doing well. From Wu Mingjin down to the ordinary clerks
 
 And his wife and children, whom he had brought back from Qiongshan, loved Australian goods far more than he did. First, his wife was inseparable from the glass mirror. Second, since Xiong Buyou sent a pair of porcelain bottles of Tianchu's "secretly made MSG," this had to be added to the dishes in the kitchen. Then, various kinds of Tianchu's pickles were sent. For Mrs. Wu, who was a guest in this barren land, it was like a timely rain after a long drought—Wu Mingjin was from Nanzhili and had a natural fondness for things like pickles and preserved eggs. Although these were common and cheap in Nanzhili, they were rare things in Lingao. Wu Mingjin ate a few slices of "Yangzhou pickled cucumber" and felt that although the taste was not quite right, the flavor was roughly the same, which aroused a feeling of "longing for home." He even wrote a few poems on the spur of the moment. For a time, he was in a great mood and sent someone to invite Master Wang to come and recite poems with him, but was told that Master Wang had gone out with his newly taken concubine. This made Wu Mingjin very disappointed.
 
-However, the 髡贼 (kūnzéi - 髡 bandits, a derogatory term for the transmigrators) were very cunning. Although they often sent things, they never sent the same thing twice. After the MSG, pickles, and preserved eggs were gone, he eagerly hoped that Xiong Buyou would send more, but there was no sign of them. To buy them, he had to go to Dongmen Market. Wu Mingjin had no choice but to cut down on his cigarette money to cover his wife's expenses.
+However, the kūnzéi (short-haired bandits, a derogatory term for the transmigrators) were very cunning. Although they often sent things, they never sent the same thing twice. After the MSG, pickles, and preserved eggs were gone, he eagerly hoped that Xiong Buyou would send more, but there was no sign of them. To buy them, he had to go to Dongmen Market. Wu Mingjin had no choice but to cut down on his cigarette money to cover his wife's expenses.
 
 As Xiong Buyou sent gifts more and more frequently, Wu Mingjin found that his cigarette money was becoming increasingly tight. His solution was to have his servant take the coarse rice that the court gave him as a salary to Dongmen Market to exchange for circulation coupons. This practice really made him feel incredible. However, circulation coupons were indeed good things.
 
@@ -38,11 +38,11 @@ A small cigarette, when lit, was half a catty of rice! Wu Mingjin felt that he w
 
 As the highest official in the county, it was really a loss of dignity for Wu Mingjin to smoke the same grade of cigarettes as the yamen clerks. So he had to continue to smoke "Holy Ship."
 
-Recently, Dongmen Market was also selling ice cubes—this caused a huge sensation. Everyone in Lingao wanted to know where the 髡贼 (kūnzéi) got their ice. The winter in Lingao does not freeze, and there are no deep mountains in the local area that can accumulate snow and store ice. The 髡贼 (kūnzéi) not only seemed to have ice, but it also seemed to come very easily. They not only used it themselves, but also sold it. A large block could be bought for 10 cents of circulation coupons.
+Recently, Dongmen Market was also selling ice cubes—this caused a huge sensation. Everyone in Lingao wanted to know where the kūnzéi got their ice. The winter in Lingao does not freeze, and there are no deep mountains in the local area that can accumulate snow and store ice. The kūnzéi not only seemed to have ice, but it also seemed to come very easily. They not only used it themselves, but also sold it. A large block could be bought for 10 cents of circulation coupons.
 
 A large block of ice placed in the hall immediately made it feel much cooler. It was even better to use ice cubes to chill fruits. Xiong Buyou also sent a few small jars of sour plum sauce—drinking a bowl of iced sour plum soup was also a beautiful thing—but it further increased Wu Mingjin's expenditure on circulation coupons.
 
-County Magistrate Wu was smart enough to realize that this was the transmigrator group luring him and his whole family with all kinds of "strange and ingenious" material enjoyments. They didn't send real gold and silver, but all kinds of things for enjoyment, and these things were only available from the 髡贼 (kūnzéi).
+County Magistrate Wu was smart enough to realize that this was the transmigrator group luring him and his whole family with all kinds of "strange and ingenious" material enjoyments. They didn't send real gold and silver, but all kinds of things for enjoyment, and these things were only available from the kūnzéi.
 
 Wu Mingjin sneered secretly: Do you think I don't know your tricks!
 
@@ -54,6 +54,6 @@ Of course, he could buy ice himself, but his cigarette money was decreasing day 
 
 Of course, he had money. Although Lingao was a remote and small county, the county magistrate's share of the summer and autumn taxes was still there as usual. But the silver he had accumulated in the past had been sent back to his hometown one after another. There was nothing to be gained from the summer tax, and the autumn tax was not yet due. For a while, besides the pitiful little salary every month, there was no other place to get money—Wu Mingjin considered himself a "conscientious" county magistrate. He would generally not do things like taking ill-gotten gains or bending the law for personal gain.
 
-Of course, as long as he showed a little sign, and complained to Wu Ya, the 髡贼 (kūnzéi) would probably take the initiative to increase his "allowance." But besides being "conscientious," County Magistrate Wu also had a little bit of "backbone"—he would never do such a thing that was close to "begging."
+Of course, as long as he showed a little sign, and complained to Wu Ya, the kūnzéi would probably take the initiative to increase his "allowance." But besides being "conscientious," County Magistrate Wu also had a little bit of "backbone"—he would never do such a thing that was close to "begging."
 
 Unexpectedly, a few days later, Xiong Buyou was very considerate and sent a stack of ice tickets. With each ticket, you could get a block of ice from Dongmen Market. Thirty blocks a month. Wu Mingjin's emotions were very complicated: he did not have the courage to refuse the Australians' bribes, but accepting them—he felt that he was sinking deeper and deeper. Not only him, but also all the officials and subordinates in the county.
