--- a/_posts/2010-11-7-3-20300.md
+++ b/_posts/2010-11-7-3-20300.md
@@ -48,7 +48,7 @@ Lin Baiguang did not dare to linger. He ran in places where there were no people
 
 He took a closer look and saw that Shi Shisi's boat was still there. Shi Shisi, with a few strong pirates, armed with bows, arrows, and long spears, stood guard at the bow of the boat. Anyone who tried to seize the boat was shot with an arrow. Even so, the deck of the boat was already full of people.
 
-"Come quickly!" Shi Shisi had sharp eyes. He saw a short-haired guy running over and looking around, and knew it was Lin Baiguang. He quickly greeted him and threw down a few ropes to let his men go down to help.
+"Come quickly!" Shi Shisi had sharp eyes. He saw a kūnzéi guy running over and looking around, and knew it was Lin Baiguang. He quickly greeted him and threw down a few ropes to let his men go down to help.
 
 Lin Baiguang finally climbed onto Shi Shisi's boat. As soon as he got on the deck, he collapsed like mud, panting heavily—this life-and-death run was really too exciting!
 
