--- a/_posts/2010-12-29-3-25500.md
+++ b/_posts/2010-12-29-3-25500.md
@@ -10,7 +10,7 @@ Wu Mingjin and Wang Zhaomin looked at each other. This matter really couldn't be
 
 "Of course, the county will still be in charge of this matter," Xiong Buyou said. "We are just assisting from the side."
 
-Wang Zhaomin thought that the so-called "assisting from the side" actually meant that the 髡贼 (kūnzéi - 髡 bandits) still wanted to control the handling of this matter—which was also good. This hot potato might as well be thrown back to the original owner to deal with. He also wanted to see what kind of medicine the Australians were selling in their gourds.
+Wang Zhaomin thought that the so-called "assisting from the side" actually meant that the kūnzéi still wanted to control the handling of this matter—which was also good. This hot potato might as well be thrown back to the original owner to deal with. He also wanted to see what kind of medicine the Australians were selling in their gourds.
 
 Wu Mingjin coughed and excused himself, saying that he was not feeling well and wanted to go back to rest for a while. Xiong Buyou knew that this was a way for officials to show that "you can do whatever you want with this matter, but it has nothing to do with me." The following matters could be discussed with Wang Zhaomin. This was also a common method in officialdom.
 
