--- a/_posts/2010-3-12-2-14600.md
+++ b/_posts/2010-3-12-2-14600.md
@@ -118,7 +118,7 @@ Wu De saw that Lin Xing was also there. The deputy commune chief was also a bach
 
 "Good, well said. Even without a home, you have to pretend you have one." Wu De looked at the commune members and laborers staring at him with surprised eyes. "Since everyone is making a living in the Bairen Commune, this is everyone's home. Come, let's have a drink." He opened the wine jar he had brought with him. "Fill them up, let's all have a bowl together."
 
-The wine was sweet glutinous rice wine brought from outside, sweet to the taste and not very strong. It was nothing for Wu De. After a drink, the laborers, who had been a bit reserved, gradually became lively. Wu De took the opportunity to distribute the various consolation gifts he had brought. There was nothing particularly good, just things like betel nuts, dried small fish, dried sweet potato strips, and sunflower seeds. But even so, it was enough to move everyone. On New Year's Eve, the great short-haired chief had come to visit them, these rough, hard-working men. Never mind the food, the honor alone was enough! When they worked for landlords, there was never such a respectable thing.
+The wine was sweet glutinous rice wine brought from outside, sweet to the taste and not very strong. It was nothing for Wu De. After a drink, the laborers, who had been a bit reserved, gradually became lively. Wu De took the opportunity to distribute the various consolation gifts he had brought. There was nothing particularly good, just things like betel nuts, dried small fish, dried sweet potato strips, and sunflower seeds. But even so, it was enough to move everyone. On New Year's Eve, the great kūnzéi chief had come to visit them, these rough, hard-working men. Never mind the food, the honor alone was enough! When they worked for landlords, there was never such a respectable thing.
 
 After leaving the collective dormitories, he led his men to the families with elderly members and children, giving each household a 5-kilogram rice ticket and a cloth ticket for one bolt of cloth. According to the regulations, the elderly and children of commune members who could not be assigned work were not entitled to meals at the cafeteria. Although the laborers could receive extra work points as compensation for their dependents, their lives were always tighter than those of ordinary people.
 
