--- a/_posts/2010-3-7-2-14100.md
+++ b/_posts/2010-3-7-2-14100.md
@@ -68,9 +68,9 @@ Back in Bairen City, after reporting the whole affair to [Wen Desi][y002], Wang 
 
 "If he were as upright and uncompromising as Hai Rui, we would have had to resort to some violence," [Wen Desi][y002] said. "Fortunately, he's not, which makes things much easier. Just wait."
 
-Sure enough, at dusk the next day, a sneaky-looking person came to the checkpoint at Wenshui Bridge. He told the sentry he wanted to see the "short-haired big official." [Luo Duo][y011], the person in charge of the checkpoint, didn't dare to be negligent and quickly called the Executive Committee.
+Sure enough, at dusk the next day, a sneaky-looking person came to the checkpoint at Wenshui Bridge. He told the sentry he wanted to see the "kūnzéi big official." [Luo Duo][y011], the person in charge of the checkpoint, didn't dare to be negligent and quickly called the Executive Committee.
 
-The man was brought to the secluded Security Group building. After some questioning, it was learned that he was a servant of Zhang Youfu and wanted to invite the "short-haired big officials" to a banquet.
+The man was brought to the secluded Security Group building. After some questioning, it was learned that he was a servant of Zhang Youfu and wanted to invite the "kūnzéi big officials" to a banquet.
 
 [Wen Desi][y002] remembered that this Zhang Youfu was the emissary sent for peace talks after the county's failed attack on them a few months ago. His sudden request for a meeting was clearly on behalf of someone else. He immediately agreed. The servant said that Zhang Youfu's estate was just outside the west gate. [Wen Desi][y002] decided to go in person. This Zhang Youfu could speak several dialects, including Cantonese, so communication would not be a problem.
 
