--- a/_posts/2010-4-2-2-16700.md
+++ b/_posts/2010-4-2-2-16700.md
@@ -46,7 +46,7 @@ Soon, "Delong Grain Company" offices were established in both the Bairen and Bop
 
 As expected, this service was extremely popular among the soldiers, though not many came to exchange their silver for coupons. Most soldiers, upon receiving their pay, would immediately deposit it at the Delong office, receiving a passbook in return, which they kept on their person. Only those soldiers with families nearby would exchange some of their pay for coupons to buy goods to take home when on leave.
 
-The initial distribution of the coupons did not cause any major reaction in the market. After all, the merchants doing business in the East Gate Market over the past few months had grown accustomed to the transmigrators' various tickets. Although the types of tickets varied, they all knew one thing for certain: every ticket issued by the "short-haired ones" could be exchanged for real goods, and the exchange was always honored for the stated amount, without any ambiguity. Dongmen Chuiyu also posted numerous notices in the market, requiring all merchants to accept the new coupons and assuring them that they could exchange the coupons for grain at the Delong Grain Company at any time.
+The initial distribution of the coupons did not cause any major reaction in the market. After all, the merchants doing business in the East Gate Market over the past few months had grown accustomed to the transmigrators' various tickets. Although the types of tickets varied, they all knew one thing for certain: every ticket issued by the "kūnzéi ones" could be exchanged for real goods, and the exchange was always honored for the stated amount, without any ambiguity. Dongmen Chuiyu also posted numerous notices in the market, requiring all merchants to accept the new coupons and assuring them that they could exchange the coupons for grain at the Delong Grain Company at any time.
 
 To build up the credibility of the coupons, every evening before the market closed, Dongmen Chuiyu and the Delong staff would go from stall to stall with carts full of rice, offering to redeem the coupons. For the first few days, almost every merchant would exchange all the coupons they had received. But after half a month, this practice became rare. Traveling merchants and peddlers, finding it inconvenient to carry bulky grain on their journeys, chose to spend their coupons directly in the East Gate Market, buying various goods. The established shopkeepers, who had initially converted their coupons into grain or other goods as a precaution, gradually started to hold onto some of the coupons after seeing that the Delong Grain Company continued to honor exchanges at any time. After all, paper money was much more convenient to carry and use than heavy copper coins and silver that often needed to be weighed due to inconsistent purity. The chaotic mix of copper coins and the hassle of weighing silver had long been a source of complaint for the merchants.
 
