--- a/_posts/2010-7-27-3-10000.md
+++ b/_posts/2010-7-27-3-10000.md
@@ -72,7 +72,7 @@ He climbed the stronghold wall to look. On the hillside a li away, there were de
 
 That such a force could march through the mountains at night and arrive at his stronghold without a sound, the thought of it made him shudder. The Australians had arrived fully armed and unannounced; their intentions were surely not good. He had long heard that the Australians' firearms were very powerful, and their cannons were invincible. Defending the stronghold was certain death. He immediately summoned his subordinate leaders.
 
-"Don't panic!" he said, scanning the somewhat panicked leaders. The sudden and secret arrival of the enemy had greatly shaken the bandits. "The髡贼 (kūnzéi - "髡" is a pun on "昆" from "昆仑奴," a term for dark-skinned slaves, and a derogatory term for baldness, referring to the transmigrators' short hair; "贼" means bandit) have powerful firearms. We can't fight them head-on. Prepare for a 'flowing water' escape!"
+"Don't panic!" he said, scanning the somewhat panicked leaders. The sudden and secret arrival of the enemy had greatly shaken the bandits. "The short haired bandits (kūnzéi - "髡" is a pun on "昆" from "昆仑奴," a term for dark-skinned slaves, and a derogatory term for baldness, referring to the transmigrators' short hair; "贼" means bandit) have powerful firearms. We can't fight them head-on. Prepare for a 'flowing water' escape!"
 
 "Flowing water" was the term for dispersing and fleeing to various secret camps in the mountains, waiting for the trouble to blow over before reassembling. It was a common tactic of the bandits.
 
