--- a/_posts/2010-8-4-3-10800.md
+++ b/_posts/2010-8-4-3-10800.md
@@ -240,7 +240,7 @@ Zhao Haixie looked at his nephew and said slowly, "Good, ruthless enough! That m
 
 The Gou family was originally a major force in the Lin'gao underworld. Ever since they were the first to be eliminated by the transmigrator group, Zhao Dachong had always felt that he was all talk and no substance.
 
-"Second Gou?" Zhao Dachong was very dismissive. "Besides the short-haired ones, even Zhu Cailao wants to catch him. He's a clay bodhisattva crossing the river—he can't even save himself."
+"Second Gou?" Zhao Dachong was very dismissive. "Besides the kūnzéi ones, even Zhu Cailao wants to catch him. He's a clay bodhisattva crossing the river—he can't even save himself."
 
 "Zhu Cailao is not the only sea lord," Zhao Haixie said. "His power is still there. I heard that his own wealth was not taken by the bald-haired thieves, and he has a lot of treasure in his hands. If we all join together, when the situation changes, we can come down from the mountain! The Australians have good things everywhere. If we can get some, we'll be rich!"
 
@@ -266,7 +266,7 @@ Xin Nachun spoke up, "I think a surprise attack is better than a frontal assault
 
 "How do we catch them off guard?" Zhao Haixie was very interested.
 
-Xin Nachun said, "The strength of the short-haired ones is their firearms. What if we ruin all their gunpowder? If they can't fire their guns without gunpowder, let's see how strong they can be!"
+Xin Nachun said, "The strength of the kūnzéi ones is their firearms. What if we ruin all their gunpowder? If they can't fire their guns without gunpowder, let's see how strong they can be!"
 
 "That's a good idea! But how do we ruin it?"
 
