--- a/_posts/2011-11-13-4-19200.md
+++ b/_posts/2011-11-13-4-19200.md
@@ -48,7 +48,7 @@ Outside the window, gongs and drums thundered. The lion dance team was warming u
 
 The Lingao Broadcasting Station's live broadcasting booth occupied an office in the Bopu customs building, ready for a live broadcast. Of course, it was a wired broadcast, not wireless, and it was the most primitive kind of wired broadcast: "speaking trumpets," as the natives called the loudspeaker system that had been set up in most parts of Lingao.
 
-At the moment, the loudspeakers were playing a rotation of majestic Soviet-era marches. This was from a "Soviet Marches" CD selected by Li Chiji's cousin, Zhang Yu, from a pile of CDs. The short-haired, baby-faced girl had been freed from the boring work of a radio operator at Lingao Telecom. According to an order from the Organization Department, such work would gradually be taken over by specially trained native personnel. After handing over her work, Zhang Yu had nowhere to go. Besides radio operation, which she had learned after arriving in Lingao, she had no special skills. As a self-proclaimed ultra-leftist, she had no interest in administrative work in an office and had once become a target of Du Wen's recruitment, becoming her subordinate. However, they did not get along well. Du Wen considered Zhang Yu's "leftist" level to be too superficial and had repeatedly suggested she read more of Stalin's works, even lending her a copy of her own reading notes for Zhang Yu's "study and reference."
+At the moment, the loudspeakers were playing a rotation of majestic Soviet-era marches. This was from a "Soviet Marches" CD selected by Li Chiji's cousin, Zhang Yu, from a pile of CDs. The kūnzéi, baby-faced girl had been freed from the boring work of a radio operator at Lingao Telecom. According to an order from the Organization Department, such work would gradually be taken over by specially trained native personnel. After handing over her work, Zhang Yu had nowhere to go. Besides radio operation, which she had learned after arriving in Lingao, she had no special skills. As a self-proclaimed ultra-leftist, she had no interest in administrative work in an office and had once become a target of Du Wen's recruitment, becoming her subordinate. However, they did not get along well. Du Wen considered Zhang Yu's "leftist" level to be too superficial and had repeatedly suggested she read more of Stalin's works, even lending her a copy of her own reading notes for Zhang Yu's "study and reference."
 
 Unexpectedly, Zhang Yu had no interest in the "notes" and was not interested in Stalin either. She was more interested in BL novels than Stalin's works. After a few days, Du Wen scoffed at her "leftist" identity, and the two women eventually had a conflict. Dong Weiwei was pregnant at the time and had no mind to coordinate the interpersonal relationships in the Social Survey Office, so the conflict intensified.
 
