--- a/_posts/2011-5-17-4-01200.md
+++ b/_posts/2011-5-17-4-01200.md
@@ -82,7 +82,7 @@ After receiving He Ma's report, Zhuo Tianmin felt uneasy. After talking with [Wa
 
 According to reports from various sources, Zhang Yingchen was not very interested in the traditional Daoist arts and the idea of ascending to immortality. His missionary theory, in Zhuo Tianmin's view, was almost like a variant of Christianity.
 
-Leaving aside his abstract explanation of the "Dao," the highest object of belief in Daoism, this short-haired Daoist priest was always talking about "the Old Lord, pitying the hardships of the world, sent five hundred True Beings on an iron ship, descending to the South China Sea, appearing as holy kings to teach and transform the people, in anticipation of the arrival of the Land of Great Peace. Those who follow the teachings are the chosen people and will surely have a place in the Land of Great Peace. Even if they unfortunately die, they will ascend to the heaven of the chosen."
+Leaving aside his abstract explanation of the "Dao," the highest object of belief in Daoism, this kūnzéi Daoist priest was always talking about "the Old Lord, pitying the hardships of the world, sent five hundred True Beings on an iron ship, descending to the South China Sea, appearing as holy kings to teach and transform the people, in anticipation of the arrival of the Land of Great Peace. Those who follow the teachings are the chosen people and will surely have a place in the Land of Great Peace. Even if they unfortunately die, they will ascend to the heaven of the chosen."
 
 *This is just utter nonsense*, Zhuo Tianmin thought. But he also admitted that under the current harsh conditions, it was a good thing for the native laborers to have some spiritual sustenance. People would be a little braver in the face of death if they knew they could go to a good place afterward.
 
