--- a/_posts/2011-5-19-4-01400.md
+++ b/_posts/2011-5-19-4-01400.md
@@ -86,7 +86,7 @@ He had been trying to get some information from his guards—including where the
 
 After nearly a month of this painful waiting, someone finally came to see him.
 
-The visitor was an Australian—Hu Xun knew he was one of them, the same as the so-called Manager Wang from Lin'gao, one of the short-haired Australians. He saw a man of medium height, sturdily built, with a shaved head, a double chin, dark circles under his eyes, and thick lips. He wore the gray short jacket common among the short-haired Australians, with a backpack slung over his shoulder and a straw hat. His appearance and dress were far beyond all of Hu Xun's social experience, and he couldn't figure out what kind of person this was.
+The visitor was an Australian—Hu Xun knew he was one of them, the same as the so-called Manager Wang from Lin'gao, one of the kūnzéi Australians. He saw a man of medium height, sturdily built, with a shaved head, a double chin, dark circles under his eyes, and thick lips. He wore the gray short jacket common among the kūnzéi Australians, with a backpack slung over his shoulder and a straw hat. His appearance and dress were far beyond all of Hu Xun's social experience, and he couldn't figure out what kind of person this was.
 
 He Fanghui politely asked about his living conditions and his health.
 
