--- a/_posts/2011-6-26-4-05200.md
+++ b/_posts/2011-6-26-4-05200.md
@@ -14,7 +14,7 @@ He had offended many people when he was rectifying the officialdom in Liangguang
 
 And Gao Shunqin's attitude was really hard to predict. This person was young and was an official in the Censorate. It was inevitable that he would be arrogant—he himself had been a censor and knew their habits well.
 
-The巡按 (xún'àn - investigating censor) Gao hated sea merchants, pirates, and Westerners with a passion. He had advised him several times, hoping to ban trade with the Portuguese. He had always been evasive. According to the rumors outside, it seemed that he was already very dissatisfied with him.
+Censor Gao hated sea merchants, pirates, and Westerners with a passion. He had advised him several times, hoping to ban trade with the Portuguese. He had always been evasive. According to the rumors outside, it seemed that he was already very dissatisfied with him.
 
 Gao Shunqin hated the Portuguese for no other reason than their "towering ships and giant cannons," "no one dares to approach," and their trafficking of various contraband. Wang Zunde felt that, to a large extent, it was because there was such a place in Guangdong that "did not obey the king's rule."
 
@@ -88,7 +88,7 @@ Lü Yizhong quickly gathered a dozen of Wang Zunde's most trusted advisors to di
 
 But his "brilliant plan" soon met with objections.
 
-"It is a great joy for the people that His Excellency the Governor-General wants to wipe out the髡贼 (kūn zéi - a derogatory term for the Australians) in Lingao," someone among them said. "But I have heard that they have connections in the inner court. I'm afraid they are not easy to move against."
+"It is a great joy for the people that His Excellency the Governor-General wants to wipe out the kūnzéi bandits in Lingao," someone among them said. "But I have heard that they have connections in the inner court. I'm afraid they are not easy to move against."
 
 Another advisor said, "The Australians are deeply connected with Gao Ju. I have heard that Gao Ju is also connected with Eunuch Yang in the palace. The connections here are probably not something we can clarify."
 
@@ -98,7 +98,7 @@ Hearing that it also involved the inner eunuchs, everyone fell silent. The days 
 
 "Although he is a eunuch, he is still a mouth in the palace. We can't easily offend him," someone still hoped to be cautious.
 
-"No matter," Lü Yizhong said. "The 髡贼 have no connection with Eunuch Yang. Gao Ju is Eunuch Yang's man. The Australians are just doing business with Gao Ju. How can Eunuch Yang, who has always been a man of great righteousness, trouble a high official of the court for a group of sea bandits?"
+"No matter," Lü Yizhong said. "The kūnzéi have no connection with Eunuch Yang. Gao Ju is Eunuch Yang's man. The Australians are just doing business with Gao Ju. How can Eunuch Yang, who has always been a man of great righteousness, trouble a high official of the court for a group of sea bandits?"
 
 Gao Ju had a lot of dealings with the Australians. Even without the Australians, the Gao family was a well-known major household that "colluded with foreigners." It would be easy to find evidence of his "collusion with sea bandits." How could Eunuch Yang do such a self-defeating and foolish thing!
 
@@ -108,7 +108,7 @@ As long as Gao Ju was not harmed and the Gao family was left in peace, Eunuch Ya
 
 "Furthermore, the Australians building a city and fortress in Lingao is the same old trick that the Franks used to occupy Macau. At that time, the court allowed the Franks. Will it allow the Australians now?" Lü Yizhong reminded. "This matter will have to be settled sooner or later. Sooner is better than later."
 
-After he analyzed it like this, everyone felt it made sense. No one opposed the suppression of the 髡贼 anymore.
+After he analyzed it like this, everyone felt it made sense. No one opposed the suppression of the australians anymore.
 
 "But how to deal with the Australians' iron ships?" someone asked. "I've heard that they are as high as a city wall, even higher than the large carracks of the red-haired barbarians and the Franks. The navy has no ships to fight them!"
 
@@ -118,7 +118,7 @@ This idea was actually still the "drive away" approach. This was not out of grea
 
 Lü Yizhong's calculation was to try to "force a retreat" of the Australians and achieve a victory with the smallest possible losses. The strength of the Australians in Lingao was somewhat known in Guangzhou.
 
-"The real 髡 in Lingao are no more than a thousand," Lü Yizhong said. "The rest are mostly local traitors who have shaved their heads and submitted to them. The total number is no less than tens of thousands. But there are men and women, old and young, mixed together. They are just attached to Lingao for the small favors of the 髡贼 and will never fight to the death for them. When the heavenly soldiers of the court arrive, they will naturally disintegrate."
+"The real Australians in Lingao are no more than a thousand," Lü Yizhong said. "The rest are mostly local traitors who have shaved their heads and submitted to them. The total number is no less than tens of thousands. But there are men and women, old and young, mixed together. They are just attached to Lingao for the small favors of the australians and will never fight to the death for them. When the heavenly soldiers of the court arrive, they will naturally disintegrate."
 
 "Even if there are only a thousand, with their strong ships and powerful cannons, they are not easy to deal with," an advisor said. "I've heard that besides the large iron ships, they also have iron fast boats and repeating guns, which are invincible. They should not be underestimated."
 
