--- a/_posts/2011-6-28-4-05400.md
+++ b/_posts/2011-6-28-4-05400.md
@@ -120,7 +120,7 @@ The matter was of course extremely confidential, but in ancient society, there w
 
 "There are plenty of reasons. The character for 'official' has two mouths. Whatever they say is right," Yan Maoda said. "The situation is indeed very dangerous!"
 
-Guo Yi nodded and said, "The Great Ming household registration is unreliable. Not to mention that we are impostors. Even for proper Guangzhou natives, the officials can deal with them as they please. Not to mention the huge property of the Guangzhou Station, which has long been coveted by many people. If this matter of suppressing the 髡贼 is true, the officials and gentry who want to seize these firms will probably be fighting over it."
+Guo Yi nodded and said, "The Great Ming household registration is unreliable. Not to mention that we are impostors. Even for proper Guangzhou natives, the officials can deal with them as they please. Not to mention the huge property of the Guangzhou Station, which has long been coveted by many people. If this matter of suppressing the Australians is true, the officials and gentry who want to seize these firms will probably be fighting over it."
 
 At this point, everyone was silent. In the past few years, the Guangzhou Station had had the wind at its back. The few people in charge had become famous figures in Guangzhou. With a single invitation from Guo Yi, people from the Guangzhou Prefecture and the Nanhai and Panyu counties would immediately come forward, and general matters could be settled immediately. Even up to the circuit yamen, the provincial administration yamen, and even the governor's and governor-general's yamen, they had connections and could get through the doors at any time. Any news could also be transmitted at any time.
 
