--- a/_posts/2011-8-24-4-11100.md
+++ b/_posts/2011-8-24-4-11100.md
@@ -156,13 +156,13 @@ Tang Menglong was very happy and nodded again and again, "But the closure of the
 
 Chen Tong said with a smile, "Now there are many people in Qiongshan County who are eager to get in touch with the Hai family."
 
-The fact that the Hai family was involved with the髡贼 was no longer a secret in Qiongshan. The coal transport ships traveled back and forth between Qiongshan and Lin Gao, and everyone knew that the Hai family was doing business with the Australians in Lin Gao.
+The fact that the Hai family was involved with the Australians was no longer a secret in Qiongshan. The coal transport ships traveled back and forth between Qiongshan and Lin Gao, and everyone knew that the Hai family was doing business with the Australians in Lin Gao.
 
 When the government army suppressed Lin Gao, this business naturally stopped. Hai Shuzu, because he was suspected of "communicating with the髡," was so scared that he hid at home and did not dare to come out. The aides of He and Zhao also extorted some money from him. Fortunately, the Hai family had a very high reputation in the local area, and ordinary officials did not dare to do anything too excessive to the Hai family. Hai Shuzu was able to get through this period peacefully until the great victory at Chengmai.
 
-With the arrival of the defeated soldiers, the news of the髡贼's strong military power and terrifying combat effectiveness spread everywhere. Hai Shuzu suddenly became the most sought-after person in Qiongzhou Prefecture. Although the prefect and the county magistrate did not visit him in person due to their official reputation, they all sent their secretaries to talk to him in secret. As for the local gentry, they were not so reserved—since the髡贼's military power was extremely strong and they had defeated the large army gathered by the government with the strength of the entire province in one battle, at this rate, I'm afraid the Australian army will soon be at the gates of Qiongzhou Prefecture.
+With the arrival of the defeated soldiers, the news of the Australians's strong military power and terrifying combat effectiveness spread everywhere. Hai Shuzu suddenly became the most sought-after person in Qiongzhou Prefecture. Although the prefect and the county magistrate did not visit him in person due to their official reputation, they all sent their secretaries to talk to him in secret. As for the local gentry, they were not so reserved—since the Australians's military power was extremely strong and they had defeated the large army gathered by the government with the strength of the entire province in one battle, at this rate, I'm afraid the Australian army will soon be at the gates of Qiongzhou Prefecture.
 
-No one believed that He Rubin's remaining few thousand defeated soldiers could resist the Australian army. Since they could not resist, in order to avoid being destroyed together when the髡贼 arrived, the local gentry naturally had to carry out "maintaining local" activities.
+No one believed that He Rubin's remaining few thousand defeated soldiers could resist the Australian army. Since they could not resist, in order to avoid being destroyed together when the Australians arrived, the local gentry naturally had to carry out "maintaining local" activities.
 
 This essentially surrender activity was carried out semi-publicly, and no one felt it was inappropriate. Zhao Ruyi and others were afraid of causing a "civilian rebellion" and did not dare to investigate. They only sent He Rubin's trusted generals to take over the defense of the various city gates of Qiongshan County and inspect the people entering and leaving.
 
@@ -176,7 +176,7 @@ Chen Tong did not understand what a "war crimes trial" was, but the meaning of t
 
 "Gao Di is trying to find a way," Chen Tong said. "I think it's nothing more than talking about how to save their lives and official positions."
 
-Chen Tong also reported that the price of rice in Qiongshan County had soared recently. Not only were the gentry and large households hoarding a large amount of grain, but the gentry, large households, and merchants in Wenchang, Ding'an, and other places were also buying rice—Qiongzhou's own grain self-sufficiency was just barely enough, and there was not much production. Qiongshan was the gateway for goods to enter and exit. It was obvious that everyone was suddenly buying rice here because they were afraid that the髡贼 would launch a large-scale siege.
+Chen Tong also reported that the price of rice in Qiongshan County had soared recently. Not only were the gentry and large households hoarding a large amount of grain, but the gentry, large households, and merchants in Wenchang, Ding'an, and other places were also buying rice—Qiongzhou's own grain self-sufficiency was just barely enough, and there was not much production. Qiongshan was the gateway for goods to enter and exit. It was obvious that everyone was suddenly buying rice here because they were afraid that the Australians would launch a large-scale siege.
 
 "The government army and the government are also purchasing grain. They are probably also afraid of a siege."
 
