--- a/_posts/2011-9-1-4-11900.md
+++ b/_posts/2011-9-1-4-11900.md
@@ -76,7 +76,7 @@ Lai Xiao, who had been waiting with bated breath, was overjoyed to finally see h
 
 "You can promise them you'll do it, but you absolutely can't actually go through with it!" Lai Xiao whispered urgently to his brother.
 
-Lai Xiao's caution was well-founded. As a handyman at the county school, he had the freedom to move around Lingao and was well-informed. He told Lai Da that the "short-haired bandits" were already mobilizing for war and had brought in many reinforcements.
+Lai Xiao's caution was well-founded. As a handyman at the county school, he had the freedom to move around Lingao and was well-informed. He told Lai Da that the "kūnzéi bandits" were already mobilizing for war and had brought in many reinforcements.
 
 "The bandits are watching the gentry like hawks! There are spies everywhere, and they've added more patrols on the roads," Lai Xiao said. "There have been a lot of strange people hanging around the county school lately. I'm afraid it's impossible for you to meet Huang Bingkun."
 
