--- a/_posts/2011-9-2-4-12000.md
+++ b/_posts/2011-9-2-4-12000.md
@@ -6,7 +6,7 @@ path: 2011-9-2-4-12000.md
 tag: [normal]
 ---
 
-Despite his outward confidence, Lai Da was deeply uneasy. He and Gou Chengyun knew better than anyone the strength of the "short-haired bandits." For the government army to force them out would require a bitter struggle. The gentry likely shared this view; otherwise, they wouldn't have refused such a low-cost, high-reward opportunity to hedge their bets.
+Despite his outward confidence, Lai Da was deeply uneasy. He and Gou Chengyun knew better than anyone the strength of the "kūnzéi bandits." For the government army to force them out would require a bitter struggle. The gentry likely shared this view; otherwise, they wouldn't have refused such a low-cost, high-reward opportunity to hedge their bets.
 
 Lai Da waited anxiously, but the news that finally arrived was of the government army's disastrous defeat at Chengmai. The Lai brothers, who had been eagerly anticipating their role in the "returning legion," were struck as if by lightning. As the spoils of war poured in from Chengmai, their hopes were completely crushed.
 
