--- a/_posts/2011-9-27-4-14500.md
+++ b/_posts/2011-9-27-4-14500.md
@@ -42,11 +42,11 @@ To facilitate the central command of military operations and supplies, Wang Zund
 
 The first news of defeat came in an urgent dispatch from the Qiongshan magistrate. He was still skeptical about the defeat at the front. After all, this was an army mobilized with the full strength of the province. If even this could not secure a victory, he dared not imagine what would happen next.
 
-Then, news of defeat came from Hainan one after another, each more certain than the last. The government army had been disastrously defeated at Chengmai, completely wiped out, and many court-appointed military officers had been killed. This news was like a thunderbolt from a clear sky, dealing a severe blow to Wang Zunde's spirit. Then, the news that the "short-haired bandits" had captured Danzhou and were besieging Haikou Guard Post and Qiongshan Prefecture plunged him into complete despair.
+Then, news of defeat came from Hainan one after another, each more certain than the last. The government army had been disastrously defeated at Chengmai, completely wiped out, and many court-appointed military officers had been killed. This news was like a thunderbolt from a clear sky, dealing a severe blow to Wang Zunde's spirit. Then, the news that the "kūnzéi bandits" had captured Danzhou and were besieging Haikou Guard Post and Qiongshan Prefecture plunged him into complete despair.
 
-From the scattered accounts of the few routed soldiers who had managed to flee back from Hainan and the evasive dispatches from He Rubin and others, he knew that the "short-haired bandits" not only had sharp firearms but also an extremely powerful army.
+From the scattered accounts of the few routed soldiers who had managed to flee back from Hainan and the evasive dispatches from He Rubin and others, he knew that the "kūnzéi bandits" not only had sharp firearms but also an extremely powerful army.
 
-Soon, there was no more military business to handle in Guangzhou. News from Hainan Island had been completely cut off. The "short-haired bandits'" warships had blockaded the Qiongzhou Strait, and government ships could no longer enter.
+Soon, there was no more military business to handle in Guangzhou. News from Hainan Island had been completely cut off. The "kūnzéi bandits'" warships had blockaded the Qiongzhou Strait, and government ships could no longer enter.
 
 The winds in the official circles blew faster than anything else. Everyone knew: Wang Zunde was finished. Not only would the emperor not tolerate such a disastrous defeat, but his political enemies and rivals in the court and the provinces would not miss this golden opportunity. Many were already secretly discussing the date of Wang Zunde's dismissal or even his arrest and transport to the capital.
 
@@ -56,7 +56,7 @@ There was nothing to do in Zhaoqing either, and his face became haggard. Not lon
 
 Dispatches and documents still poured into the governor-general's yamen, but his advisors were rarely summoned to discuss the next military strategy. In fact, the advisors all knew that Guangdong's military strength was depleted. Besides the Yao-suppressing commanders in the east and west mountains, Guangdong had no more organized military forces.
 
-His illness worsened day by day under this anxiety. What worried him most was whether the "short-haired bandits" would take the opportunity to attack Guangzhou. If they did, Guangdong had almost no troops to defend against them.
+His illness worsened day by day under this anxiety. What worried him most was whether the "kūnzéi bandits" would take the opportunity to attack Guangzhou. If they did, Guangdong had almost no troops to defend against them.
 
 Not many days later, a dispatch reported that strangely shaped ships had been seen scouting the Pearl River estuary. These ships were fast and slender, completely different from both Chinese and foreign ships—clearly, they were the Australians' fast boats.
 
