--- a/_posts/2011-9-28-4-14600.md
+++ b/_posts/2011-9-28-4-14600.md
@@ -28,7 +28,7 @@ After Li Xijue left, he gathered the other advisors to discuss the matter. They 
 
 As for the peace negotiations, Li Xijue did not have the audacity to make such a decision on his own, and Lu Yizhong's letter could not be leaked. He only secretly sent someone to Macao to see if the Australians were willing to come there for further discussions.
 
-The most difficult issue was the remnants of He Rubin's forces, now trapped in Haikou. Several thousand men were besieged in the Haikou-Qiongshan area, with no supplies from within and no reinforcements from without. Even news was completely cut off. Under the siege of the "short-haired bandits'" army, they would likely be annihilated before long.
+The most difficult issue was the remnants of He Rubin's forces, now trapped in Haikou. Several thousand men were besieged in the Haikou-Qiongshan area, with no supplies from within and no reinforcements from without. Even news was completely cut off. Under the siege of the "kūnzéi bandits'" army, they would likely be annihilated before long.
 
 The death of so many court-appointed military officers at Chengmai was already shocking. If He Rubin was also killed or captured, it would shake the court and the country even more than the great defeat at Chengmai—comparable to the defeat and death of Lu Qin in the sixth year of the Tianqi era. That would truly shake the two Guangdong provinces.
 
@@ -36,11 +36,11 @@ Li Xijue pondered at the advisory meeting, "If only we could safely withdraw Gen
 
 "The strait is now blockaded, and our navy is at a disadvantage. How can we cross?" an advisor said, shaking his head repeatedly.
 
-The "short-haired bandits'" navy had demonstrated its superiority in the small-scale battles to blockade the Qiongzhou Strait. The Guangdong navy was no match for them.
+The "kūnzéi bandits'" navy had demonstrated its superiority in the small-scale battles to blockade the Qiongzhou Strait. The Guangdong navy was no match for them.
 
 "We must first send spies to secretly infiltrate Qiongzhou and establish contact with General He. After all, we need to know how many troops are left, their morale, and their supply situation."
 
-"And what if we find out? If we don't quickly seek a settlement with the 'short-haired bandits,' I'm afraid General He's forces..."
+"And what if we find out? If we don't quickly seek a settlement with the 'kūnzéi bandits,' I'm afraid General He's forces..."
 
 "Should we report to His Excellency the Governor-General and ask him to quickly summon General Chen to Zhaoqing for consultation, to see if we can mobilize more troops to relieve General He?"
 
@@ -66,7 +66,7 @@ Any ships entering or leaving these ports were seized and escorted to Maniao for
 
 This blockade was devastating to the flow of goods in Qiongshan. True, the Fubo Army had not blockaded the ports in government-held areas like Wenchang, but the ports of other prefectures and counties were of no help to the transport to Qiongshan itself. The prefectures and counties of Hainan relied almost entirely on coastal shipping for the transport of bulk goods. Given the poor condition of the post roads, long-distance land transport of goods was almost impossible.
 
-Tang Yunwen, seeing that the blockading "short-haired bandit" warships were mostly small and medium-sized and few in number, made several attempts to break the blockade at sea. Each time, he was utterly defeated. The navy's ships were no match for the Ming navy of the medieval era in terms of equipment and training. In the end, the navy's ships completely retreated to the Baisha Naval Base and no longer ventured out.
+Tang Yunwen, seeing that the blockading "kūnzéi bandit" warships were mostly small and medium-sized and few in number, made several attempts to break the blockade at sea. Each time, he was utterly defeated. The navy's ships were no match for the Ming navy of the medieval era in terms of equipment and training. In the end, the navy's ships completely retreated to the Baisha Naval Base and no longer ventured out.
 
 As a result, Qiongshan was effectively under siege. Although Qiongshan itself was not short of grain stores, and the summer harvest was soon to come, the sense of hopelessness from being cut off from the outside world caused the morale of the besieged government forces to plummet even further.
 
