--- a/_posts/2011-9-3-4-12100.md
+++ b/_posts/2011-9-3-4-12100.md
@@ -68,7 +68,7 @@ The surrender was orchestrated by the Danzhou Registrar. He and the local gentry
 
 The West Detachment, having been rested and resupplied, was in even better form and higher morale than before the Battle of Chengmai.
 
-The message had been sent by the Danzhou Registrar. Like Sun Ruiwu in Lingao, he had despaired of his future as an official in such a remote and troubled prefecture. While not openly defecting, he held a strong "wait-and-see" attitude. Therefore, he neither killed himself nor fled, but remained in the city under the pretext of protecting the official seal to manage the surrender. If the "short-haired bandits" could stay for the long term, he had no objection to switching allegiance and serving these Australians.
+The message had been sent by the Danzhou Registrar. Like Sun Ruiwu in Lingao, he had despaired of his future as an official in such a remote and troubled prefecture. While not openly defecting, he held a strong "wait-and-see" attitude. Therefore, he neither killed himself nor fled, but remained in the city under the pretext of protecting the official seal to manage the surrender. If the "kūnzéi bandits" could stay for the long term, he had no objection to switching allegiance and serving these Australians.
 
 "I thought we'd have to camp outside the city, but I didn't expect to get in so smoothly," Yu Zhiqian, the detachment commander, said arrogantly to Liu Yixiao, the leader of the Danzhou work team.
 
