--- a/_posts/2011-9-5-4-12300.md
+++ b/_posts/2011-9-5-4-12300.md
@@ -34,9 +34,9 @@ This was Hu Lanyan's new base. When the bandit suppression campaign began in Lin
 
 After fleeing to Luomao Mountain, Gou Xunli had become Hu Lanyan's "dog-head strategist." He was Hu Lanyan's sworn brother, full of cunning ideas, and literate and numerate—a rare talent in a bandit gang. He quickly climbed to the position of second-in-command.
 
-Gou Xunli had been dreaming day and night of a message from the mixed-blood "wanton woman" in Macao, giving him instructions to crush the "short-haired bandits" and avenge his family. But months passed with no word. Gou Xunli didn't dare go to the county seat or Dongmen Market—he was too well-known, and many people in the county recognized him. He could only bide his time in the bandit lair, waiting for the day he could be part of a "returning legion."
+Gou Xunli had been dreaming day and night of a message from the mixed-blood "wanton woman" in Macao, giving him instructions to crush the "kūnzéi bandits" and avenge his family. But months passed with no word. Gou Xunli didn't dare go to the county seat or Dongmen Market—he was too well-known, and many people in the county recognized him. He could only bide his time in the bandit lair, waiting for the day he could be part of a "returning legion."
 
-The news that the "short-haired bandits" were going to suppress them had already filled Gou Xunli with a secret dread. He knew their power better than anyone. So when Hu Lanyan suggested moving, he naturally had no objections. As long as he could stay alive, there was always a chance for a comeback. But he understood the rules of the bandit world: though it looked like a vast wilderness, every piece of it was someone else's territory. The arrival of an outside gang inevitably meant a fight.
+The news that the "kūnzéi bandits" were going to suppress them had already filled Gou Xunli with a secret dread. He knew their power better than anyone. So when Hu Lanyan suggested moving, he naturally had no objections. As long as he could stay alive, there was always a chance for a comeback. But he understood the rules of the bandit world: though it looked like a vast wilderness, every piece of it was someone else's territory. The arrival of an outside gang inevitably meant a fight.
 
 Unless the newcomers were exceptionally strong, they would likely lose such a fight—the local snake is stronger than the mighty dragon, as the saying goes. Hu Lanyan wasn't worried. He was a Danzhou native, and more than half of his men were from Danzhou as well—specifically, from a few neighboring villages. Now, with the addition of scattered bandits, his gang had swelled to over two hundred men. With the support of his local kinsmen, taking this territory was not a problem.
 
@@ -46,7 +46,7 @@ With his superior numbers and the support of local clans, Hu Lanyan quickly defe
 
 Although Hu Lanyan's force was strong, a larger group meant higher expenses. He allowed some of the men who had families locally and didn't want to be full-time bandits to return home and become "part-time bandits." That is, they would be called upon for raids and to share the spoils, but would otherwise farm at home. He himself remained in the mountains with a core group of over a hundred men, occasionally descending to pull off a job.
 
-But a few days ago, a scout brought news: a contingent of "short-haired bandits" had occupied Danzhou city. This made Hu Lanyan very anxious. The Australians were particularly zealous about suppressing bandits. If they started another campaign in Danzhou, he would have no choice but to flee to Changhua—a place full of sand, with a dirt-poor populace. If he went there, he wouldn't even be able to feed his men.
+But a few days ago, a scout brought news: a contingent of "kūnzéi bandits" had occupied Danzhou city. This made Hu Lanyan very anxious. The Australians were particularly zealous about suppressing bandits. If they started another campaign in Danzhou, he would have no choice but to flee to Changhua—a place full of sand, with a dirt-poor populace. If he went there, he wouldn't even be able to feed his men.
 
 Hu Lanyan yawned, picked up a bamboo ladle, and scooped some water from a rain-filled vat outside the lean-to. He rinsed his mouth and splashed some water on his face. Then he kicked the "sentry" sleeping soundly at the entrance.
 
