--- a/_posts/2011-9-6-4-12400.md
+++ b/_posts/2011-9-6-4-12400.md
@@ -6,9 +6,9 @@ path: 2011-9-6-4-12400.md
 tag: [normal]
 ---
 
-"Going down to the villages." Hu Lanyan nodded. He had heard a great deal about the effectiveness of the "short-haired bandits'" village work from bandits who had fled from other gangs.
+"Going down to the villages." Hu Lanyan nodded. He had heard a great deal about the effectiveness of the "kūnzéi bandits'" village work from bandits who had fled from other gangs.
 
-They knew that the "short-haired bandits" placed great importance on "going down to the villages." Back in Lingao, they had heard of "work teams"—small groups protected by soldiers that ventured deep into the wilderness and remote countryside. Some would gather intelligence in the villages and stay to train the local militia. Others would climb mountains and cross ridges, drawing maps and collecting various rocks and leaves. These seemingly insignificant teams were like spiders, casting their webs in all directions, eventually ensnaring the whole of Lingao, killing all who resisted and forcing everyone else to submit.
+They knew that the "kūnzéi bandits" placed great importance on "going down to the villages." Back in Lingao, they had heard of "work teams"—small groups protected by soldiers that ventured deep into the wilderness and remote countryside. Some would gather intelligence in the villages and stay to train the local militia. Others would climb mountains and cross ridges, drawing maps and collecting various rocks and leaves. These seemingly insignificant teams were like spiders, casting their webs in all directions, eventually ensnaring the whole of Lingao, killing all who resisted and forcing everyone else to submit.
 
 "The Australians are from overseas. How did they manage to gain a foothold in Lingao?" Gou Xunli said, brushing the taro peel from his hands. "The most important thing is 'going down to the villages.' If you stay in the county seat, no matter how many men you have, you'll never know what's happening in the countryside. Once they go down to the villages and establish themselves, plenty of people will leak information to them."
 
@@ -16,7 +16,7 @@ Hu Lanyan said, "You're right, brother. But what should we do?"
 
 "What should we do?" Gou Xunli said fiercely. "We'll kill every team that comes. We'll make sure their work teams that go down to the villages never return!"
 
-"The bandits' firearms are powerful. If we go to kill them, it's a suicide mission," Hu Lanyan said, shocked. He had never faced the "short-haired bandits" directly, but he had heard many stories from others. As is often the case, the rumors were more terrifying than the reality.
+"The bandits' firearms are powerful. If we go to kill them, it's a suicide mission," Hu Lanyan said, shocked. He had never faced the "kūnzéi bandits" directly, but he had heard many stories from others. As is often the case, the rumors were more terrifying than the reality.
 
 "I'll come up with a plan," Gou Xunli said after a moment's thought. "Call Xin Nari in."
 
@@ -24,7 +24,7 @@ Xin Nari had narrowly escaped with his life from the ambush at Daolu Village. He
 
 He was terrified of the Australians. Whenever they were mentioned, he would embellish his stories, speaking of their mysterious movements and the deadliness of their firearms.
 
-When he heard that Gou Xunli wanted to specifically target the work teams, he was startled. The remnants of Dang Namen's gang had had the same idea. Their plan to coordinate from within and without had been well-devised, yet they had been inexplicably ambushed and wiped out. Even his sister had been captured by the "short-haired bandits."
+When he heard that Gou Xunli wanted to specifically target the work teams, he was startled. The remnants of Dang Namen's gang had had the same idea. Their plan to coordinate from within and without had been well-devised, yet they had been inexplicably ambushed and wiped out. Even his sister had been captured by the "kūnzéi bandits."
 
 "Second Master!" Xin Nari said cautiously. "The work teams may be small, but they have thirty or forty men, and each one has an Australian musket. If we fight them head-on, we're no match for them."
 
