--- a/_posts/2011-9-8-4-12600.md
+++ b/_posts/2011-9-8-4-12600.md
@@ -34,11 +34,11 @@ In the end, they decided to send a corporal for help—he was the most senior so
 
 ---
 
-Gou Xunli wiped the sweat from his brow. The sky was ominously dark, and the air was heavy, as if it was about to rain. His poisoning plan had been successfully executed. According to the village liaison he had bribed, the "short-haired bandits" had indeed washed the vegetables they bought from him in the river, then chopped them up and boiled them in the pot.
+Gou Xunli wiped the sweat from his brow. The sky was ominously dark, and the air was heavy, as if it was about to rain. His poisoning plan had been successfully executed. According to the village liaison he had bribed, the "kūnzéi bandits" had indeed washed the vegetables they bought from him in the river, then chopped them up and boiled them in the pot.
 
 He and a few trusted men had waited in the village until the afternoon. Estimating that the people inside had been poisoned, he then ordered the bandit gangs waiting more than ten *li* away to close in on the camp.
 
-By now, he was certain: the "short-haired bandits" in the camp had fallen for his trick. The village liaison he had bribed had run to tell him that an Australian leader had just come to the village, asking for men to carry people.
+By now, he was certain: the "kūnzéi bandits" in the camp had fallen for his trick. The village liaison he had bribed had run to tell him that an Australian leader had just come to the village, asking for men to carry people.
 
 "Good. Take these brothers with you, and say they are the men from the village," Gou Xunli said, squinting at the informant.
 
@@ -102,7 +102,7 @@ The main force of the bandits was led by Hu Lanyan himself. It included not only
 
 Seeing Liu Dazhu's headless body and the revolver taken from him, Hu Lanyan couldn't stop grinning.
 
-"Brother, you are truly formidable! You took down the bandits without lifting a finger. I am impressed!" Hu Lanyan had initially thought this was a losing proposition, but now he had an Australian handgun in his possession. Once he had chopped off the heads of all the "short-haired bandits" in the camp, he would have dozens of genuine Australian muskets.
+"Brother, you are truly formidable! You took down the bandits without lifting a finger. I am impressed!" Hu Lanyan had initially thought this was a losing proposition, but now he had an Australian handgun in his possession. Once he had chopped off the heads of all the "kūnzéi bandits" in the camp, he would have dozens of genuine Australian muskets.
 
 "It is my duty to serve you," Gou Xunli said with a smile. "This handgun is a gift for you, brother."
 
