--- a/_posts/2011-9-9-4-12700.md
+++ b/_posts/2011-9-9-4-12700.md
@@ -86,7 +86,7 @@ Xin Nari said, "Should we just retreat?" He was terrified of the Australians and
 
 "We should attack from all four sides at once. That way, they won't know which way to turn."
 
-As they were talking, someone reported that they had captured a "short-haired bandit" on the mountain road.
+As they were talking, someone reported that they had captured a "kūnzéi bandit" on the mountain road.
 
 "Excellent!" Gou Xunli's spirits lifted. "Quick, bring him here!"
 
