--- a/_posts/2012-1-11-5-01400.md
+++ b/_posts/2012-1-11-5-01400.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 "...The Australians buy jute, cotton yarn, cotton cloth, and opium—all goods brought by the Portuguese. They also sell goods to the Portuguese. Just selling wine, they can sell thousands of barrels!" Huang Shunlong knew that Master Lin was very interested in the "Australians," and his dealings with them could not be hidden from these people. So he deliberately spoke at length. But he was very careful to conceal the fact that the Australians were buying large quantities of Indian saltpeter. The court forbade the export of saltpeter. But the Australians, he didn't know from where, had learned that India produced saltpeter—he, Huang Shunlong, who had been doing business with the Portuguese in Macau for so many years, had never known about this.
 
-Lin Ming listened intently. After hearing Huang Shunlong's words, he became even more interested in the Australians. Lin Ming had not participated in Wang Zunde's "punitive expedition against the short-haired bandits." The Guangdong Jinyiwei had not been involved in this matter from beginning to end. Of course, even if the Guangdong Jinyiwei were to participate, there would probably be no suitable candidate to act as a spy in Lin'gao. Guangdong had been at peace for a long time, and Lin Ming knew better than anyone what the hundred-household offices were like now. Of his two subordinate banner commanders, one had taken leave to do business and had not been seen for a long time. The other spent his days socializing with merchants and scrounging for profits. The lower-ranking banner commanders, officers, and soldiers, besides thinking about ways to "find money," "get money," and "spend money," were just idling their time away. Who would be willing to work hard? Even he himself, if it weren't for his hope of promotion, would not bother with the Australians.
+Lin Ming listened intently. After hearing Huang Shunlong's words, he became even more interested in the Australians. Lin Ming had not participated in Wang Zunde's "punitive expedition against the kūnzéi bandits." The Guangdong Jinyiwei had not been involved in this matter from beginning to end. Of course, even if the Guangdong Jinyiwei were to participate, there would probably be no suitable candidate to act as a spy in Lin'gao. Guangdong had been at peace for a long time, and Lin Ming knew better than anyone what the hundred-household offices were like now. Of his two subordinate banner commanders, one had taken leave to do business and had not been seen for a long time. The other spent his days socializing with merchants and scrounging for profits. The lower-ranking banner commanders, officers, and soldiers, besides thinking about ways to "find money," "get money," and "spend money," were just idling their time away. Who would be willing to work hard? Even he himself, if it weren't for his hope of promotion, would not bother with the Australians.
 
 Li Yongxun was not interested in their conversation. To her, the Australians were no different from the Portuguese or the Dutch—they were all merchants from overseas who brought interesting goods. But their things seemed more interesting. Especially the set of silver-cased lipsticks in her cousin's boudoir, which had more than ten different shades of red alone. The lipstick didn't need to be mixed with water beforehand; it could be applied directly to the lips, making them moist and beautiful. It was much better than the "Jiangnan rouge" that came in porcelain boxes from Yangzhou and Nanjing, and cleaner than biting a piece of red paper. Her cousin treasured it very much, and even she had only used it secretly a few times when her cousin was not around.
 
