--- a/_posts/2012-1-5-5-00800.md
+++ b/_posts/2012-1-5-5-00800.md
@@ -10,9 +10,9 @@ After Lin Ming arrived in Guangzhou and paid his respects to Li Fengjie, He Chen
 
 The best outcome, of course, would be to find Gao Shunqin and bring him back, which would make everyone happy. If he couldn't be found, how to report it would be a headache.
 
-Lin Ming knew that since He Zhen's defeat, it was fortunate that Wang Zunde had died in a timely manner. This gave the staff and advisors ample room to maneuver. In short, Wang Zunde became the main culprit. Li Fengjie managed logistics from the rear, He Zhen fought bravely at the front, and the soldiers fought with their lives... In the end, the government forces, after an initial defeat, emerged victorious, fighting for a month and thwarting the short-haired bandits' attempt to capture the prefecture and seize the county... The bandits, in a desperate move, fled to Guangzhou, where they were defeated by the coastal defense commander Xu Tingfa. The entire Qiongzhou prefecture was secured, without the loss of a single prefecture or county...
+Lin Ming knew that since He Zhen's defeat, it was fortunate that Wang Zunde had died in a timely manner. This gave the staff and advisors ample room to maneuver. In short, Wang Zunde became the main culprit. Li Fengjie managed logistics from the rear, He Zhen fought bravely at the front, and the soldiers fought with their lives... In the end, the government forces, after an initial defeat, emerged victorious, fighting for a month and thwarting the kūnzéi bandits' attempt to capture the prefecture and seize the county... The bandits, in a desperate move, fled to Guangzhou, where they were defeated by the coastal defense commander Xu Tingfa. The entire Qiongzhou prefecture was secured, without the loss of a single prefecture or county...
 
-This routine of concealing defeats and embellishing victories could also be applied to this matter. He thought it over and over. If Gao Shunqin had really died at the hands of the short-haired bandits or the Portuguese, the best way to handle it would be to report him as "whereabouts unknown" and turn it into a cold case—of course, that depended on whether Governor Li and the others were sensible. Anyway, he, Lin Ming, was just a "guest official" in this case.
+This routine of concealing defeats and embellishing victories could also be applied to this matter. He thought it over and over. If Gao Shunqin had really died at the hands of the kūnzéi bandits or the Portuguese, the best way to handle it would be to report him as "whereabouts unknown" and turn it into a cold case—of course, that depended on whether Governor Li and the others were sensible. Anyway, he, Lin Ming, was just a "guest official" in this case.
 
 Lin Ming mulled over the causes and consequences until his eyes gleamed, losing all sleepiness. By then, the third watch of the night had already been sounded. Suddenly, he heard the loud sound of a door opening and closing in the courtyard. He couldn't help but wonder—it was the middle of the night, and besides the yamen runners on guard, there were no outsiders in the Gao residence. Who was walking around in the courtyard? He quickly got out of bed and peered through a small piece of glass inlaid in the window. It was his sister-in-law. This little girl, for some unknown reason, was standing in the courtyard, staring at the sky in a daze.
 
@@ -44,11 +44,11 @@ The leader nodded slightly.
 
 The leader smiled lightly and pulled off his hat—as if by magic, his head seemed to shed a layer of skin, revealing short stubble.
 
-"You are the short-haired bandits!" he exclaimed, both shocked and angry.
+"You are the kūnzéi bandits!" he exclaimed, both shocked and angry.
 
 "This official is the Acting Minister of the Court of Receptions of the Great Song's Australian Regency." The young man uttered this sentence fluently. He had practiced it countless times in private to fully display the majesty of the Great Song.
 
-Gao Shunqin was stunned. He had no knowledge of Song Dynasty history and was a little slow to react to Jiang Shan's sudden announcement. However, he immediately sneered, "You are just overseas barbarians!" He then thought that since the short-haired bandits had captured him, this must be their lair, Lin'gao! He had been in a semi-conscious state since he was captured, and his memory was not very clear. He couldn't remember if he had been out at sea. The few remaining impressions seemed to include being on a boat and hearing the cries of seagulls.
+Gao Shunqin was stunned. He had no knowledge of Song Dynasty history and was a little slow to react to Jiang Shan's sudden announcement. However, he immediately sneered, "You are just overseas barbarians!" He then thought that since the kūnzéi bandits had captured him, this must be their lair, Lin'gao! He had been in a semi-conscious state since he was captured, and his memory was not very clear. He couldn't remember if he had been out at sea. The few remaining impressions seemed to include being on a boat and hearing the cries of seagulls.
 
 His heart sank. Given his past anti-foreigner rhetoric, it was needless to say that these overseas barbarians who claimed to be descendants of the Great Song hated him to the bone. They must have gone to great lengths to capture him in order to torture him in every possible way and then execute him by slow slicing, to intimidate the court officials in Guangdong.
 
