--- a/_posts/2012-10-11-5-28800.md
+++ b/_posts/2012-10-11-5-28800.md
@@ -44,7 +44,7 @@ Although the fishing village had fish to supplement their food, the merchants wh
 
 People who have long struggled on the brink of starvation have a powerful desire to eat their fill. This is also a motivation that is most easily exploited and can unleash the greatest destructive force. The methods Feng Zongze used were not new, but they were just as effective.
 
-Not long after the Haenyeo were released, they quickly mobilized the villagers who had fled to the mountains to return. Most families had no food stored for the next day and had been cut off from their daily catch. They could no longer survive hiding in the mountains. Now, hearing that the "short-haired Wokou" were offering amnesty, they came down.
+Not long after the Haenyeo were released, they quickly mobilized the villagers who had fled to the mountains to return. Most families had no food stored for the next day and had been cut off from their daily catch. They could no longer survive hiding in the mountains. Now, hearing that the "kūnzéi Wokou" were offering amnesty, they came down.
 
 After the villagers had all returned, Feng Zongze held a meeting in the village. He told the villagers to continue fishing and harvesting seafood, but that they had to sell all their catch to them. Payment would be made in grain and other daily necessities.
 
@@ -62,7 +62,7 @@ The two brothers were in a daze throughout the journey, filled with fear and app
 
 Compared to the former, the latter was more acceptable to the two brothers; after all, they were already slaves on Jeju. They were only worried that the language barrier would make life difficult. Of course, Park Deok-hwan was reluctant; he had spent a considerable amount of his savings preparing to build a house. If he were taken to Japan, he would have to start all over again.
 
-It was only after their hoods were finally removed and they were settled that they realized they were in Jeongui County town—they had been sent to this area on errands for the Jeju garrison before. What surprised them even more was that Jeongui County town had already fallen into the hands of the Wokou! Inside and outside the town, there were short-haired, short-clothed Wokou everywhere, carrying "iron cannons."
+It was only after their hoods were finally removed and they were settled that they realized they were in Jeongui County town—they had been sent to this area on errands for the Jeju garrison before. What surprised them even more was that Jeongui County town had already fallen into the hands of the Wokou! Inside and outside the town, there were kūnzéi, short-clothed Wokou everywhere, carrying "iron cannons."
 
 The fact that they hadn't left Jeju Island for the time being brought them some relief. The captives were all brought to Jeongui County town. The Jeju Island Forward Command had set up a "study class" here, preparing to cultivate a large number of local collaborators.
 
