--- a/_posts/2012-10-15-5-29200.md
+++ b/_posts/2012-10-15-5-29200.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 Park Deok-hwan's current position was "Civil Affairs Assistant" to Feng Zongze, which was effectively the role of a "translator" with an expanded scope of duties. Because Feng Zongze's Korean was not his native language, and there was also a gap of several hundred years, he sometimes could not express himself very clearly. At such times, Park Deok-hwan, who was fluent in Chinese, was needed to act as a bridge. His younger brother, Park Deok-maeng, was assigned a clerical position in the military administration committee.
 
-Park Deok-hwan's work was plentiful and arduous. In just a few days, the commoners and government slaves in Jeju town came to know him as the "red man" of the "short-haired Wokou."
+Park Deok-hwan's work was plentiful and arduous. In just a few days, the commoners and government slaves in Jeju town came to know him as the "red man" of the "kūnzéi Wokou."
 
 Anyone with even a little property in or out of the town—including the shopkeepers of the stores and workshops in the town, and the landlords and pasture owners outside—all came to him with gifts, inviting him to meals and speaking kind words, all for the sake of peace and security. The Park brothers had been here for nearly ten years and were considered semi-local. He knew the ins and outs of Jeju town and its surroundings.
 
