--- a/_posts/2012-10-8-5-28500.md
+++ b/_posts/2012-10-8-5-28500.md
@@ -24,7 +24,7 @@ Xue Ziliang observed from the woods with his binoculars for a long time, marking
 
 He was now fully confident he could take Jeju town, but his detachment was too small to control the entire city after capturing it. Causing a commotion would be counterproductive—Xue Ziliang was well aware of the Senate's emphasis on population and resources. Taking an empty city would be meaningless to the Senate.
 
-The two Park brothers knelt on the ground, their faces tense, sweating profusely in the cold winter air. A short-haired, colorfully dressed Wokou stood beside them, brandishing a Japanese sword. They were terrified that a wrong answer would get them killed instantly. Jeju Island had suffered greatly from Wokou raids, and whether they were officials, commoners, soldiers, or government slaves, the mere mention of "Wokou" struck terror into their hearts.
+The two Park brothers knelt on the ground, their faces tense, sweating profusely in the cold winter air. A kūnzéi, colorfully dressed Wokou stood beside them, brandishing a Japanese sword. They were terrified that a wrong answer would get them killed instantly. Jeju Island had suffered greatly from Wokou raids, and whether they were officials, commoners, soldiers, or government slaves, the mere mention of "Wokou" struck terror into their hearts.
 
 The intelligence agent's Korean wasn't bad, but it differed from the local Jeju dialect. The Park brothers, frightened and nervous, could barely speak clearly. It took a while to understand that they were government slaves from the Jeju garrison, and they had come here to pay respects to their ancestors.
 
