--- a/_posts/2012-12-10-5-34800.md
+++ b/_posts/2012-12-10-5-34800.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 Zhu Mingxia, dressed in the gray woolen winter uniform of the northern detachment and a woolen officer's cape, strode majestically down the gangplank to the sound of a march playing from a loudspeaker. Park Chang-beom, the administrative officer of the Chaotianpu port area, was already waiting on the shore. This Officer Park had become quite adept at identifying the flags of the constantly arriving ships. As soon as he saw a ship flying the "Yuanlao Command Flag" enter the port, he would immediately go to greet it, just as he used to greet officials arriving from the mainland.
 
-Through diligent study and constant observation these past days, Park Chang-beom had fully grasped the intentions of these short-haired Kun people who had suddenly appeared from the sea, claiming to be from the "Great Song."
+Through diligent study and constant observation these past days, Park Chang-beom had fully grasped the intentions of these kūnzéi Kun people who had suddenly appeared from the sea, claiming to be from the "Great Song."
 
 They intended to stay on this Jeju Island for the long haul, and their actions and strength were like that of a rival nation. This was good news for Park Chang-beom, who had already sold his allegiance. His initial "betrayal" had been an act of vengeful anger against the Joseon court for its long-term neglect and suppression of him. Now, seeing that the other side was not only powerful but also intended to entrench themselves on Jeju and oppose the Joseon court, he, a newly minted "traitor to the dynasty," felt even more invigorated. All of Park Chang-beom's grievances against the Joseon court—the years of unrecognized talent, the humiliation of being looked down upon and mistreated by his superiors—had transformed into an endless workaholic fervor. He worked not for money, not for women, not for anything... but only to show the blind court the retribution they deserved for scorning him!
 
