--- a/_posts/2012-2-7-5-04100.md
+++ b/_posts/2012-2-7-5-04100.md
@@ -48,15 +48,15 @@ But why did the Australians capture her too? The person in the sedan chair was o
 
 However, Li Yongxun's pride and excitement did not last long. She was sent to the quarantine camp. After suffering what she called a "great shame and humiliation"—a physical examination and a collective disinfecting bath—she was locked up in this large room full of bunk beds, living a tedious life of two meals of seafood congee a day. No one came to question her again. No matter what she asked, the women guarding this place never uttered a single useful word. As for the other women in Room 39, she couldn't get any information from them either—like her, they had been sent here as soon as they landed.
 
-Outside the barracks were three neatly dressed short-haired rebels in matching short jackets, with leather belts around their waists and another one slung across their chests. Blue cloth strips were sewn onto their shoulders, with some strange patterns. Small blue cloth patches were also sewn on their collars. The leader was the young girl who had brought her food on the ship. She wore the same clothes as the male short-haired rebels, but her lower body was paired with a dark blue pleated skirt—Li Yongxun's eyes widened: the skirt did not even cover her instep, but only went past her knees, revealing the white cotton stockings that tightly wrapped her calves underneath.
+Outside the barracks were three neatly dressed kūnzéi rebels in matching short jackets, with leather belts around their waists and another one slung across their chests. Blue cloth strips were sewn onto their shoulders, with some strange patterns. Small blue cloth patches were also sewn on their collars. The leader was the young girl who had brought her food on the ship. She wore the same clothes as the male kūnzéi rebels, but her lower body was paired with a dark blue pleated skirt—Li Yongxun's eyes widened: the skirt did not even cover her instep, but only went past her knees, revealing the white cotton stockings that tightly wrapped her calves underneath.
 
-"Shameless," Li Yongxun muttered to herself. Even so, she still felt a bit envious. The woman in front of her was clearly holding an official position among the short-haired rebels, which was much better than her, an imposter who used someone else's waist token to bluff.
+"Shameless," Li Yongxun muttered to herself. Even so, she still felt a bit envious. The woman in front of her was clearly holding an official position among the kūnzéi rebels, which was much better than her, an imposter who used someone else's waist token to bluff.
 
 "One priority quarantine personnel pending investigation, Li Yongxun!" The female guard handed a paper folder to Ke Yun. Ke Yun opened it, looked at it, and then checked the bamboo tag hanging around her neck.
 
 "Identity verified!" Ke Yun said, then signed the handover form. "Take her away!"
 
-"Where are you taking me?" Li Yongxun asked loudly, but no one answered her. A short-haired rebel took out a black hood and put it directly over her head. The feeling of darkness and suffocation instantly injected immense fear into her heart. She felt someone push her, and she was taken away.
+"Where are you taking me?" Li Yongxun asked loudly, but no one answered her. A kūnzéi rebel took out a black hood and put it directly over her head. The feeling of darkness and suffocation instantly injected immense fear into her heart. She felt someone push her, and she was taken away.
 
 An immense sense of fear enveloped her entire body. Li Yongxun had been in and out of the Ming Dynasty's violent institutions since she was a child and knew very well the fate of those who fell into the hands of such institutions—regardless of guilt or innocence, even imperial relatives, if there was no intervention from high-level officials, even an immortal would have to shed a layer of skin. The fate of female prisoners was even more terrifying: they would be repeatedly humiliated and raped. She herself had interrogated female prisoners—she knew the horror of it. Thinking that all kinds of terrible experiences were about to befall her, a strong urge to urinate rose uncontrollably from her lower abdomen.
 
