--- a/_posts/2012-2-8-5-04200.md
+++ b/_posts/2012-2-8-5-04200.md
@@ -20,11 +20,11 @@ Li Yongxun once again met the three-person team led by that woman. They were sti
 
 In the courtyard stood several multi-story buildings similar to those of the Franks, but not as beautiful as the Franks' houses. The windows were all inlaid with glass, but they were also fitted with sturdy wooden bars. Nothing could be seen from the outside.
 
-A new kind of fear crept into her heart: what is this place? Could it be the prison of the short-haired rebels? The appearance was not very similar to that of the Ming Dynasty, but the stern and cold atmosphere emanating from this place was very familiar to her from her childhood.
+A new kind of fear crept into her heart: what is this place? Could it be the prison of the kūnzéi rebels? The appearance was not very similar to that of the Ming Dynasty, but the stern and cold atmosphere emanating from this place was very familiar to her from her childhood.
 
 This was the "study class" of the General Political Security Bureau. In fact, nothing was studied here; it was a place where the Political Security Bureau exclusively detained people. In the system of the transmigrator regime...
 
-"Go in!" Ke Yun urged her. Li Yongxun had no choice but to go up the steps. The double doors, covered in iron sheets, opened, and a cripple came out—a wooden leg was exposed under one of his trouser legs. This person was also wearing a matching short jacket and the same blue shoulder straps as the female short-haired rebels.
+"Go in!" Ke Yun urged her. Li Yongxun had no choice but to go up the steps. The double doors, covered in iron sheets, opened, and a cripple came out—a wooden leg was exposed under one of his trouser legs. This person was also wearing a matching short jacket and the same blue shoulder straps as the female kūnzéi rebels.
 
 "One person to be processed, name Li Yongxun, female!" Ke Yun handed the document in her hand to the other party. The two of them were busy writing and stamping at the table by the door for a while. The crippled man then took out a string of keys.
 
@@ -42,7 +42,7 @@ Li Yongxun found herself in a simple and tidy room. Inside, there was only a bed
 
 "You will live here. Rest for a while. Someone will come to talk to you in a few days."
 
-"Talk about what?" Li Yongxun didn't know what kind of medicine the short-haired rebels were selling in their gourds. It seemed that this was "house arrest," which made her feel a little relieved.
+"Talk about what?" Li Yongxun didn't know what kind of medicine the kūnzéi rebels were selling in their gourds. It seemed that this was "house arrest," which made her feel a little relieved.
 
 Ke Yun did not answer her question. "There are paper and pens here. You can start by writing your autobiography."
 
@@ -64,11 +64,11 @@ While Li Yongxun was busy writing materials in the study class of the General Po
 
 The disappearance of Imperial Censor Gao became a complete cold case in Guangzhou. After a fruitless search in Macau, Lin Ming had to return to Guangzhou in dejection. To avoid too much external influence in Guangzhou, he went to Sanshui County again in the name of investigating the case and then stayed there.
 
-At this time, he had already determined in his heart that the short-haired rebels were the real culprits behind Gao Shunqin's disappearance, and Li Yongxun's disappearance was most likely related to the case of Imperial Censor Gao. But at present, the attitude of the Guangzhou officialdom towards the Australians was "peace." If he jumped out at this time and said that the short-haired rebels were the black hand, he would be creating a problem for the governor—if an important official was lost in Lingao, could the Guangdong officialdom ignore it? To send troops to fight would be seeking death. Not to mention that the Guangdong side did not dare to send troops to fight at all, even if they arrested the big merchant Guo Dongzhu, the head of the short-haired rebels who was about to return to Guangzhou, to exchange for the hostage, Governor Li would not dare—that would mean preparing for the Five Rams Station to be burned down a second time.
+At this time, he had already determined in his heart that the kūnzéi rebels were the real culprits behind Gao Shunqin's disappearance, and Li Yongxun's disappearance was most likely related to the case of Imperial Censor Gao. But at present, the attitude of the Guangzhou officialdom towards the Australians was "peace." If he jumped out at this time and said that the kūnzéi rebels were the black hand, he would be creating a problem for the governor—if an important official was lost in Lingao, could the Guangdong officialdom ignore it? To send troops to fight would be seeking death. Not to mention that the Guangdong side did not dare to send troops to fight at all, even if they arrested the big merchant Guo Dongzhu, the head of the kūnzéi rebels who was about to return to Guangzhou, to exchange for the hostage, Governor Li would not dare—that would mean preparing for the Five Rams Station to be burned down a second time.
 
 If he really reported it this way, he would have completely offended Li Fengjie and the Guangdong officialdom.
 
-Lin Ming gritted his teeth and thought for a long time, and finally decided to hold his nose and go along with the meaning of the Guangdong officialdom. Imperial Censor Gao would have to be wronged and dedicate himself to the country. Fortunately, so far, all the evidence found pointed his route after leaving Guangzhou to the north. Except for himself and Li Yongxun, who was captured by the Australians, no one could provide a definite clue that the short-haired rebels were responsible. His big search in Macau could only be considered as based on "rumors," and the Australians were at most "suspected."
+Lin Ming gritted his teeth and thought for a long time, and finally decided to hold his nose and go along with the meaning of the Guangdong officialdom. Imperial Censor Gao would have to be wronged and dedicate himself to the country. Fortunately, so far, all the evidence found pointed his route after leaving Guangzhou to the north. Except for himself and Li Yongxun, who was captured by the Australians, no one could provide a definite clue that the kūnzéi rebels were responsible. His big search in Macau could only be considered as based on "rumors," and the Australians were at most "suspected."
 
 As for his sister-in-law, she had to be rescued—otherwise, his wife would not agree. Besides, he couldn't just let an outsider get away with it! But this matter could not be handled by the government; he had to do it himself, privately. Fortunately, he had the Jinyiwei token, and he had a good reputation in the Hundred-household's office, so it was not difficult to mobilize official resources.
 
