--- a/_posts/2013-10-1-6-17100.md
+++ b/_posts/2013-10-1-6-17100.md
@@ -8,11 +8,11 @@ tag: [normal]
 
 Cao Guangjiu was not a surprising character. The first time Gou Chengxuan met him, he knew he was a "worn-out boot" type. Although they didn't have this term in Lingao, Cao was cut from the same cloth. Back then, the scholars of Lingao had cursed him as a disgrace to the literati.
 
-"Calling me a disgrace, yet every single one of you went and surrendered to the short-haired thieves!" When Gou Chengxuan woke from nightmares, painfully aware of his own downfall, he would always remember the Lingao scholars who had cursed him and his father. He hated the short-haired thieves even more for their poor judgment, for not trying to win over his Gou family first and instead colluding with those salt mongrels.
+"Calling me a disgrace, yet every single one of you went and surrendered to the kūnzéi thieves!" When Gou Chengxuan woke from nightmares, painfully aware of his own downfall, he would always remember the Lingao scholars who had cursed him and his father. He hated the kūnzéi thieves even more for their poor judgment, for not trying to win over his Gou family first and instead colluding with those salt mongrels.
 
-In truth, his family would have had no qualms about surrendering to the short-haired thieves. It was just that the short-haired thieves had treated his family like a wild monster to be slain first, leaving the Gou family with no opportunity to even betray their country. Now it had escalated into a matter of national and personal hatred, a painful feeling of "no gateway to treason."
+In truth, his family would have had no qualms about surrendering to the kūnzéi thieves. It was just that the kūnzéi thieves had treated his family like a wild monster to be slain first, leaving the Gou family with no opportunity to even betray their country. Now it had escalated into a matter of national and personal hatred, a painful feeling of "no gateway to treason."
 
-This intense sense of loss, coupled with his own family's decline, filled Gou Chengxuan with a fierce hatred for the short-haired thieves. He felt he had no choice but to fight them to the death.
+This intense sense of loss, coupled with his own family's decline, filled Gou Chengxuan with a fierce hatred for the kūnzéi thieves. He felt he had no choice but to fight them to the death.
 
 This wasn't the first time he had come to Hao Yuan's place. The man was very strange: he lived in a stinking slum, yet his room was kept immaculately clean.
 
