--- a/_posts/2013-10-2-6-17200.md
+++ b/_posts/2013-10-2-6-17200.md
@@ -40,11 +40,11 @@ He added that the posters should specifically mention Zhao Yigong's collusion wi
 
 "We must specifically mention his collusion with the foreign monks and his use of Western dark arts. That's why he has so many novel things. Don't forget that many of the things he sells are Australian goods! Who can say for sure where these Australian goods come from? This will also be a reminder to the scholars and citizens of this city."
 
-"Brilliant, truly brilliant!" Gou Chengxuan was already full of hatred for the short-haired bandits, and this suggestion was right up his alley. "It's not that I'm talking too much, but I see Master Zhao as a genuine髡-thief, no doubt about it!"
+"Brilliant, truly brilliant!" Gou Chengxuan was already full of hatred for the kūnzéi bandits, and this suggestion was right up his alley. "It's not that I'm talking too much, but I see Master Zhao as a genuine髡-thief, no doubt about it!"
 
 "Hehe, whether he is a髡-thief or not is irrelevant." Hao Yuan smiled faintly. "As long as we ruin the reputation of the so-called Australians, it won't be so easy for them to deceive the common people with their tricks of being both a ghost and a doctor in the future. We must let the people see their true faces! Otherwise, if we drive away one Zhao Yigong, there will be a Liu Yigong and a Wang Yigong."
 
-Gou Chengxuan and Cao Guangjiu listened, half-understanding. But they didn't ask further questions. One was already full of hatred for the short-haired bandits, and the other was just doing a job for money, uninterested in anything else.
+Gou Chengxuan and Cao Guangjiu listened, half-understanding. But they didn't ask further questions. One was already full of hatred for the kūnzéi bandits, and the other was just doing a job for money, uninterested in anything else.
 
 Hao Yuan added, "However, the posters should not involve the Christian gentry. Our target is Zhao Yigong. We should not create unnecessary enemies."
 
