--- a/_posts/2013-2-9-5-40900.md
+++ b/_posts/2013-2-9-5-40900.md
@@ -6,7 +6,7 @@ path: 2013-2-9-5-40900.md
 tag: [normal]
 ---
 
-Lü Yizhong looked to be in good health, his face glowing. Since his return to Guangzhou, he had initially been somewhat shy and ashamed to show his face. But as the short-haired thieves' power in Guangzhou grew, their business boomed, and the Pearl River was filled with their steamboats, bringing in shiploads of goods and taking out shiploads more. The officials, too, were all eager to curry favor, their faces beaming with ingratiating smiles. His heart, once full of sorrow and shame, had mostly recovered, and he gradually returned to his old ways, bustling between the various government offices in Guangzhou, acting for all the world like a "short-haired thief advisor," which made him the subject of much gossip in official circles.
+Lü Yizhong looked to be in good health, his face glowing. Since his return to Guangzhou, he had initially been somewhat shy and ashamed to show his face. But as the kūnzéi thieves' power in Guangzhou grew, their business boomed, and the Pearl River was filled with their steamboats, bringing in shiploads of goods and taking out shiploads more. The officials, too, were all eager to curry favor, their faces beaming with ingratiating smiles. His heart, once full of sorrow and shame, had mostly recovered, and he gradually returned to his old ways, bustling between the various government offices in Guangzhou, acting for all the world like a "kūnzéi thief advisor," which made him the subject of much gossip in official circles.
 
 For this medical tour, Lü Yizhong had also run around to coordinate with the officialdom. After a few pleasantries, he quickly got into his sedan chair and personally led the way. Both Nanhai and Panyu counties had sent yamen runners to control the crowd and provide an escort.
 
