--- a/_posts/2013-7-28-6-10600.md
+++ b/_posts/2013-7-28-6-10600.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 Although he psychologically despised the Australians' "techniques" as not being the "right path," Huang Bingkun took the existence of the Australians and their growing power—so powerful that it could deceive many people, even those scholars who were well-versed in the classics, who willingly debased themselves—very seriously. He was not an ostrich who buried his head in the sand. He knew that to defeat the Australians, one had to "learn the barbarians' long skills to subdue the barbarians." To defeat the enemy, one must first understand the enemy. Second Young Master Huang had followed his old master in fighting bandits since he was a child and knew the importance of knowing oneself and one's enemy.
 
-To implement his strategy of "learning the barbarians' long skills to subdue the barbarians" and to learn more about the髡贼's internal affairs, shortly after the establishment of the County Consultative Bureau, he took the opportunity of his father, Huang Shoutong, being appointed a "commissioner." He discussed with his old father sending his personal servant, Huang Ping, to study at Fangcaodi to learn the Australians' skills and to spy on the髡贼's internal affairs. The gentry who had become commissioners all sent their own children to study to show their sincerity.
+To implement his strategy of "learning the barbarians' long skills to subdue the barbarians" and to learn more about the kūnzéi's internal affairs, shortly after the establishment of the County Consultative Bureau, he took the opportunity of his father, Huang Shoutong, being appointed a "commissioner." He discussed with his old father sending his personal servant, Huang Ping, to study at Fangcaodi to learn the Australians' skills and to spy on the kūnzéi's internal affairs. The gentry who had become commissioners all sent their own children to study to show their sincerity.
 
 At the time, Huang Shoutong had frowned for a long time without speaking, as if he felt it was "inappropriate." Huang Bingkun repeatedly explained his intentions. In the end, Huang Shoutong sighed and said, "The Huang family's property in Lin'gao cannot be wasted on useless disputes of pride. Bingkun, we must see the bigger picture!"
 
@@ -20,9 +20,9 @@ Every time he came back, Huang Ping was like a happy little bird, chattering non
 
 Huang Bingkun always listened very carefully to his servant. This once taciturn boy had gradually become talkative since going to Fangcaodi. Every time he came back, he had endless topics to talk about with everyone: his studies, the school environment, his classmates, and his teachers.
 
-After Huang Ping finally finished talking, Huang Bingkun would always praise him a few times and remind him not to forget the "words of the sages" and not to be "deceived by the髡贼." Huang Ping would always agree meekly and then go to reunite with his parents.
+After Huang Ping finally finished talking, Huang Bingkun would always praise him a few times and remind him not to forget the "words of the sages" and not to be "deceived by the kūnzéi." Huang Ping would always agree meekly and then go to reunite with his parents.
 
-Huang Ping's parents farmed in the Huang family village. Since their son went to school, every time they met Second Young Master Huang, they would always have a silly smile on their faces and thank him profusely for the "young master's great kindness." This made Huang Bingkun feel very proud. He had both spied on the髡贼's secrets and won the hearts of the people.
+Huang Ping's parents farmed in the Huang family village. Since their son went to school, every time they met Second Young Master Huang, they would always have a silly smile on their faces and thank him profusely for the "young master's great kindness." This made Huang Bingkun feel very proud. He had both spied on the kūnzéi's secrets and won the hearts of the people.
 
 Huang Bingkun spent a lot of time studying the copied textbooks and supplementary materials, hoping to find the secret method for making large cannons, muskets, and big iron ships. Unfortunately, although the髡's textbooks used Chinese characters, the arithmetic and natural science courses used a large number of letters to represent things, so Second Young Master Huang couldn't understand them. Besides, although Huang Ping was already fourteen when he enrolled, he could only start from the first grade of the primary school department. The three courses in the first grade of Fangcaodi's primary school—mathematics, language, and natural science—did not talk about the "techniques" that Huang Bingkun most wanted to know.
 
