--- a/_posts/2013-7-29-6-10700.md
+++ b/_posts/2013-7-29-6-10700.md
@@ -58,7 +58,7 @@ Liu Dalin had just recovered from a serious illness. Reading these letters, he s
 
 Huang Bingkun was getting nervous under Scholar Liu's gaze and didn't know what to say. Suddenly, he saw Liu Dalin straighten his back, as if he were lecturing at the county school, sitting in his wheelchair, and said seriously, "I think that although the Australians' learning is different from ours, they still have great depth in their hearts. Moreover, they are of the same Chinese lineage, by no means barbarians. I will go and ask Teacher Wang to mediate, so that we can also go and see the Australians' school, to increase our knowledge and broaden our horizons."
 
-Huang Bingkun had finally persuaded Liu Dalin, and a stone was lifted from his heart. Fangcaodi was now mainly a boarding school. Only immediate family members could make an appointment to visit students, and when Huang Ping had registered, Huang Bingkun was not listed as a family member. Moreover, the Huang family still had a blood feud with the髡 for killing their son. Even if the Huang family no longer had any thoughts of revenge, the髡贼 would surely be on their guard.
+Huang Bingkun had finally persuaded Liu Dalin, and a stone was lifted from his heart. Fangcaodi was now mainly a boarding school. Only immediate family members could make an appointment to visit students, and when Huang Ping had registered, Huang Bingkun was not listed as a family member. Moreover, the Huang family still had a blood feud with the髡 for killing their son. Even if the Huang family no longer had any thoughts of revenge, the kūnzéi would surely be on their guard.
 
 He left Liu Dalin's house and returned to the Jasmine Pavilion Academy, hoping to find some xiucai to go with him to make a bigger show of it. But the academy was empty. The east and west wings, which were once hard to get a bed in, were now empty, the beds and desks all bare. Only a few beds looked like they were still occupied.
 
