--- a/_posts/2013-7-30-6-10800.md
+++ b/_posts/2013-7-30-6-10800.md
@@ -60,7 +60,7 @@ But he still said, "Ah, gentlemen, please come in, please come in." He squeezed 
 
 Huang Bingkun and Li Fenba were also in the delegation. The last time Li Fenba told him that his family was also going to join the Tiandi Hui, he rushed back to the Huang family village overnight to ask his old father what was going on.
 
-"Father, you are confused. If you join that damn Tiandi Hui, they will enter our house openly and everything will be controlled by the髡. Will the tenants and long-term laborers still listen to our family then? Won't our family be at their mercy? Besides, the髡贼's foundation is still shallow. If the court comes back one day, we will be traitors," Huang Bingkun pleaded with his old father in the study.
+"Father, you are confused. If you join that damn Tiandi Hui, they will enter our house openly and everything will be controlled by the髡. Will the tenants and long-term laborers still listen to our family then? Won't our family be at their mercy? Besides, the kūnzéi's foundation is still shallow. If the court comes back one day, we will be traitors," Huang Bingkun pleaded with his old father in the study.
 
 "Bingkun!" Huang Shoutong roared heavily. "You still haven't given up! The Huang family cannot be ruined by you. The court? Still the court! Can't you see that this Great Ming is about to end? With all the elite troops and financial resources of the country, they can't even retake Shenyang. The eastern barbarians have invaded several times, and the capital has been under martial law several times. And they're going to cross the sea to retake Qiongzhou?!"
 
