--- a/_posts/2013-7-31-6-10900.md
+++ b/_posts/2013-7-31-6-10900.md
@@ -6,13 +6,13 @@ path: 2013-7-31-6-10900.md
 tag: [normal]
 ---
 
-Upon entering the school gate, they saw a stone pedestal half a person's height, on which stood two statues over a person tall. Most of the delegation members were well-read, but none could identify which deity or Buddha was enshrined on this stone pedestal. They could only see that they were stone statues of two young people, a boy and a girl. The boy's and girl's attire was the uniform worn by the students of Fangcaodi—what the髡贼 called a "uniform." Both were standing with their chests out, striding forward with their heads held high. The male statue pointed forward with one hand, while the female statue held a scroll.
+Upon entering the school gate, they saw a stone pedestal half a person's height, on which stood two statues over a person tall. Most of the delegation members were well-read, but none could identify which deity or Buddha was enshrined on this stone pedestal. They could only see that they were stone statues of two young people, a boy and a girl. The boy's and girl's attire was the uniform worn by the students of Fangcaodi—what the kūnzéi called a "uniform." Both were standing with their chests out, striding forward with their heads held high. The male statue pointed forward with one hand, while the female statue held a scroll.
 
 Wang Ci looked and looked. Unlike the other scholars from Lin'gao who had only seen a few temples in their own county and prefecture, he had come from the mainland and was more experienced. He had visited at least one or two hundred temples and monasteries, but he had never seen such a statue. Not to mention that he couldn't understand the meaning of the statue, the statue itself was very different from what he had seen before. The lines of the clothes and the faces of these two stone statues were very sharp, but their appearance and expressions were very vivid, which made Wang Ci click his tongue in wonder.
 
 As he was engrossed in looking, someone suddenly tugged at his sleeve. Wang Ci was startled and found that it was Huang Bingkun.
 
-"I wonder which demon or god of the髡贼 this boy and girl are?" Huang Bingkun whispered. "Since they claim to be descendants of the Great Song, why do they worship this unorthodox demon?"
+"I wonder which demon or god of the kūnzéi this boy and girl are?" Huang Bingkun whispered. "Since they claim to be descendants of the Great Song, why do they worship this unorthodox demon?"
 
 Wang Ci shook his head and said, "This is definitely not an orthodox worship!"
 
@@ -28,9 +28,9 @@ He had doubts in his heart, but it was not convenient to ask, lest he reveal his
 
 "These are not sages. They represent the image of the young students of our Great Song's Australian administration," Dong Yizhi explained. "It can also be said that it is the image of the students of our Fangcaodi."
 
-Although the delegation did not quite understand the specific meaning of his words, they roughly understood that this was what the Australians thought the ideal young students should look like. Wang Ci looked at the two statues. Both the male and female were tall and strong. In particular, the bulging muscles on the boy's rolled-up sleeves and the sturdy calves and a pair of huge, unbound feet exposed under the girl's skirt made him curse inwardly, "The髡贼 are really a bunch of ruffians!"
+Although the delegation did not quite understand the specific meaning of his words, they roughly understood that this was what the Australians thought the ideal young students should look like. Wang Ci looked at the two statues. Both the male and female were tall and strong. In particular, the bulging muscles on the boy's rolled-up sleeves and the sturdy calves and a pair of huge, unbound feet exposed under the girl's skirt made him curse inwardly, "The short haired bandits are really a bunch of ruffians!"
 
-People who looked like this had no trace of scholarly elegance; they were just like ordinary workers and farmers. And the expressions on their faces, their gestures, and their movements all exuded a kind of arrogant and forward-moving spirit of the髡贼—like brave warriors, yet they were the models for the young students in the eyes of the髡贼. The髡贼's insight was really ridiculous! No wonder the gentry secretly discussed that the髡贼 were "indiscriminate of high and low" and "crude and uncultured."
+People who looked like this had no trace of scholarly elegance; they were just like ordinary workers and farmers. And the expressions on their faces, their gestures, and their movements all exuded a kind of arrogant and forward-moving spirit of the kūnzéi—like brave warriors, yet they were the models for the young students in the eyes of the kūnzéi. The short haired bandits's insight was really ridiculous! No wonder the gentry secretly discussed that the kūnzéi were "indiscriminate of high and low" and "crude and uncultured."
 
 Everyone had their own thoughts, but they did not show it on the surface. They just politely said "please, please" to each other and followed the two Elders, Dong and Tang, into the school.
 
@@ -44,7 +44,7 @@ The students, wearing uniform student uniforms, marched in neat steps, their for
 
 They had all seen the reviews and drills of the Fubo Army and deeply felt that the Australians not only had "excellent equipment" but also had a set of methods for governing the army. They did not expect that it was the same in this school. If these students were a few years older and were sent out to form battalions, they would instantly become a strong army!
 
-"The髡贼 have ulterior motives!" Huang Bingkun thought to himself. He looked at the faces of the people around him. Their expressions were all different. Some were grave, some were expressionless, and some showed joy. He couldn't help but sigh inwardly. The hearts of the people in this Lin'gao County had already been half-deceived by the髡!
+"The short haired bandits have ulterior motives!" Huang Bingkun thought to himself. He looked at the faces of the people around him. Their expressions were all different. Some were grave, some were expressionless, and some showed joy. He couldn't help but sigh inwardly. The hearts of the people in this Lin'gao County had already been half-deceived by the髡!
 
 Dong Yizhi saw that the delegation from the Jasmine Pavilion was a little dazed. He coughed and said, "Gentlemen, the daily assembly is over. Please follow me to the rest area for a short break, and then come and listen to our classes." He then made a gesture of invitation.
 
