--- a/_posts/2013-8-19-6-12800.md
+++ b/_posts/2013-8-19-6-12800.md
@@ -30,7 +30,7 @@ Mao Shisan only felt a ball of fire in front of his eyes. He wanted to open his 
 
 However, he really had no strength to open his eyes. He thought, *if I die, I die,* and so he fell asleep again.
 
-When Mao Shisan woke up, he was already lying in the cabin of a ship. It turned out that he had not died but had been rescued by a group of strange short-haired people.
+When Mao Shisan woke up, he was already lying in the cabin of a ship. It turned out that he had not died but had been rescued by a group of strange kūnzéi people.
 
 A young man with short hair and a short coat was busy beside him. According to him, the "Chief" had found him fainted on the beach. It was snowing at the time. If not for the Chief's kindness, he would have frozen to death on the beach long ago.
 
