--- a/_posts/2013-8-6-6-11500.md
+++ b/_posts/2013-8-6-6-11500.md
@@ -68,7 +68,7 @@ Huang Binkun felt as if he had discovered a priceless treasure. He carefully fol
 
 That night, back in his dormitory, Huang Binkun sat at his desk and painstakingly practiced the Australian "incantations." After filling more than ten pages, he felt something was amiss. He slapped his forehead. "Of course! I had completely forgotten! To draw their talismans and cast their spells, the bandits must use an Australian pen, and they must write from left to right."
 
-He immediately went to the school's small shop and purchased a charcoal pencil. Then he began to copy the formulas in the "Australian style." But his years of writing from right to left, top to bottom, made the new orientation deeply uncomfortable. He cursed under his breath as he wrote, "The Analects speak of 'disheveled hair and robes folding to the left.' These short-haired bandits write from the left. They have truly become barbarians in their time overseas."
+He immediately went to the school's small shop and purchased a charcoal pencil. Then he began to copy the formulas in the "Australian style." But his years of writing from right to left, top to bottom, made the new orientation deeply uncomfortable. He cursed under his breath as he wrote, "The Analects speak of 'disheveled hair and robes folding to the left.' These kūnzéi bandits write from the left. They have truly become barbarians in their time overseas."
 
 He copied the "incantations" with diligence, but he still could not fathom how to speak this "Shulihua." He would have to wait for Huang Ping's return and ask him then.
 
