--- a/_posts/2014-1-28-6-29000.md
+++ b/_posts/2014-1-28-6-29000.md
@@ -32,7 +32,7 @@ Aisaburo returned to the guardhouse and soon fell back into his daydream about r
 
 Fernando Marcos leaned back in his seat under the carriage awning. After all the effort of talking to those Japanese, he felt too tired to say another word. There was nothing more tiring than trying to explain to the people of this world who he was and what he could do.
 
-In another time and space, Marcos's career as a sailor on various illegal vessels had lasted for more than 20 years. He once considered himself a born lucky man. Whether his smuggling boat was seized by the Korean coast guard and he was detained, or his smuggling ship encountered a Russian border guard patrol boat and was hit by machine-gun fire, almost sending him to meet the Sea Dragon King, he had at least managed to save his own life in the end. But he could never have dreamed that fate would play such a novel joke on him, throwing him and everyone on the *Saba* into a strange world that he still hadn't fully figured out. When their lifeboat was overturned by the waves, Marcos almost thought his life was over. Fortunately, he and the *Saba*'s engineer, Aquino, had been soaking in the sea for half a day and were about to lose consciousness when they were finally rescued by an Anhai ship heading for Zhongzuosuo. Zheng Zhilong and his men initially regarded these two strangely dressed Filipinos, who couldn't even explain their own origins, as Dutch spies, and later as accomplices of the髡贼 (kūn zéi - "shaved-head bandits," a derogatory term for the transmigrators). The two unlucky men were thrown into a water prison and subjected to all kinds of torture. In the end, everyone concluded that they were just two half-mad men spouting nonsense, who posed no threat and were of little use.
+In another time and space, Marcos's career as a sailor on various illegal vessels had lasted for more than 20 years. He once considered himself a born lucky man. Whether his smuggling boat was seized by the Korean coast guard and he was detained, or his smuggling ship encountered a Russian border guard patrol boat and was hit by machine-gun fire, almost sending him to meet the Sea Dragon King, he had at least managed to save his own life in the end. But he could never have dreamed that fate would play such a novel joke on him, throwing him and everyone on the *Saba* into a strange world that he still hadn't fully figured out. When their lifeboat was overturned by the waves, Marcos almost thought his life was over. Fortunately, he and the *Saba*'s engineer, Aquino, had been soaking in the sea for half a day and were about to lose consciousness when they were finally rescued by an Anhai ship heading for Zhongzuosuo. Zheng Zhilong and his men initially regarded these two strangely dressed Filipinos, who couldn't even explain their own origins, as Dutch spies, and later as accomplices of the kūnzéi (kūn zéi - "shaved-head bandits," a derogatory term for the transmigrators). The two unlucky men were thrown into a water prison and subjected to all kinds of torture. In the end, everyone concluded that they were just two half-mad men spouting nonsense, who posed no threat and were of little use.
 
 If Fernando Marcos had ever heard of the so-called "dragon-slaying skill," he would have understood it deeply. This Chinese idiom was a vivid portrayal of his situation. There were no GPS or LORAN navigation stations for him to use in Zheng's territory, nor were there any diesel engines or other power equipment that needed Aquino's care and maintenance. They were completely ignorant of the workings of a 17th-century Chinese junk, not even qualified as sailors. These two unlucky men, of no use to the Zheng family, were forced to become the lowest and most humble slave laborers, doing hard labor under the whips of the overseers, and occasionally having their anuses used by others to experience "exotic customs." This inhuman torture continued for years. Aquino grew weaker and weaker and finally died of malaria. If it weren't for being discovered by Hale and redeemed to Manila while building the cannon foundry in Zhongzuosuo, Marcos would surely have followed in his footsteps soon after, dying for one reason or another, his body tied to a stone and thrown into the sea, to be slowly gnawed to the bone by fish and shrimp.
 
