--- a/_posts/2014-10-6-7-05800.md
+++ b/_posts/2014-10-6-7-05800.md
@@ -20,13 +20,13 @@ Although the citizens of Guangzhou had always had a carefree attitude of drinkin
 
 This atmosphere of fear quietly spread among all classes. The illusory sense of security created by the geographical distance and the delay in the spread of news was pierced by this "news."
 
-The big and small bureaucrats in the city were particularly frightened. They knew very well where the source of the rumors came from and what their purpose was. The髡贼 who had been dormant after harassing Guangzhou were obviously also affected by the current situation and were preparing to make a move. The target was very likely Guangzhou!
+The big and small bureaucrats in the city were particularly frightened. They knew very well where the source of the rumors came from and what their purpose was. The short haired bandits who had been dormant after harassing Guangzhou were obviously also affected by the current situation and were preparing to make a move. The target was very likely Guangzhou!
 
-Such speculation was by no means groundless. The officials in Guangzhou were not deaf. What happened on Hainan Island was no secret to them. In the past few years, officials on Hainan Island who had left their posts and been transferred had to stop in Guangzhou to rest, meet their superiors and colleagues, and chat about their experiences in office—who didn't know that Hainan Island had become "like an enemy country." All those who left their posts said that the髡贼 had "disloyal intentions" and would sooner or later "make a big change." But saying was one thing, who could go and destroy their lair? After Xiong Wencan, the governor-general in charge of pacification, took office, everyone was very eager to see if he had the means to turn the髡贼 into a second Zheng Zhilong. However, after Zheng Zhilong's old lair was destroyed by the髡贼 and he himself died in battle, the officialdom in Guangdong no longer had any hope for this. Xiong Wencan no longer mentioned this matter and stepped up preparations for war and defense against the enemy.
+Such speculation was by no means groundless. The officials in Guangzhou were not deaf. What happened on Hainan Island was no secret to them. In the past few years, officials on Hainan Island who had left their posts and been transferred had to stop in Guangzhou to rest, meet their superiors and colleagues, and chat about their experiences in office—who didn't know that Hainan Island had become "like an enemy country." All those who left their posts said that the kūnzéi had "disloyal intentions" and would sooner or later "make a big change." But saying was one thing, who could go and destroy their lair? After Xiong Wencan, the governor-general in charge of pacification, took office, everyone was very eager to see if he had the means to turn the kūnzéi into a second Zheng Zhilong. However, after Zheng Zhilong's old lair was destroyed by the kūnzéi and he himself died in battle, the officialdom in Guangdong no longer had any hope for this. Xiong Wencan no longer mentioned this matter and stepped up preparations for war and defense against the enemy.
 
-However, in the eyes of those officials who had more contact with the髡贼 and understood them better, Governor Xiong's preparations were probably useless. Governor Xiong probably knew this himself—the Governor-General's Office of Guangdong and Guangxi had moved from Zhaoqing to Guangzhou not long ago, and then, on the pretext of something, requested the court to move back to Zhaoqing.
+However, in the eyes of those officials who had more contact with the kūnzéi and understood them better, Governor Xiong's preparations were probably useless. Governor Xiong probably knew this himself—the Governor-General's Office of Guangdong and Guangxi had moved from Zhaoqing to Guangzhou not long ago, and then, on the pretext of something, requested the court to move back to Zhaoqing.
 
-The officialdom in Guangzhou watched the Grand World outside the East Gate with suspicion, pessimism, and tension—the investment promotion work there was lively, and there was no sign of war. However, the slightly more astute and capable officials had long smelled something from the髡贼's recent actions. The髡贼 were hoarding grain through their local henchmen. The number of ships on the Pearl River was also much more than usual, which seemed to contain unsettling intentions.
+The officialdom in Guangzhou watched the Grand World outside the East Gate with suspicion, pessimism, and tension—the investment promotion work there was lively, and there was no sign of war. However, the slightly more astute and capable officials had long smelled something from the kūnzéi's recent actions. The short haired bandits were hoarding grain through their local henchmen. The number of ships on the Pearl River was also much more than usual, which seemed to contain unsettling intentions.
 
 For Zhang Yu, this news did not affect his mood. Since his family got the order for walnut crisps from the teahouse in the Grand World and became a licensed supplier, the originally anxious and gloomy atmosphere at home was swept away. The order from the Grand World was not actually that large, at most the amount of one or two teahouses. But he got the "Grand World Designated Supplier" sign from Zhang Yikun. As soon as it was spread, it caused a sensation in the entire tea and pastry industry in Guangzhou. The retail sales immediately increased by seven or eight times, and many wealthy families even instructed their servants to cross Guangzhou to buy walnut crisps from his shop. Some teahouses that did not originally order from his family also ordered from him. For a time, this originally unknown small shop became a famous shop in Guangzhou.
 
@@ -36,7 +36,7 @@ Zhang Yu's status in the community school also rose a lot. Originally, the child
 
 Recently, they all seemed to have changed. At the very least, they would say a few polite words when they saw him. Some even specially brought money to ask him to buy walnut crisps. The originally snobbish teacher no longer made an example of him at will, and he could even be spared the caning on his hand when he couldn't recite the new lesson.
 
-His few good friends in the community school were happy for him, but they were also a little jealous in their hearts, especially Zeng Juan. His family also ran a small shop, and his family's situation was on par with Zhang Yu's. Now that Zhang Yu's family had made a comeback, his family was still the same old hard-working family, so he inevitably felt unfair. As for Li Ziyu, he was also a little unwilling to have his limelight greatly reduced. He kept talking about the "divine weapons" in the "Wubei Zhi" to prove that the Ming Dynasty was only because "treacherous officials were in power," otherwise, whether it was the髡贼's Grand World or Lingao's whatever fort, they were all渣渣 in front of the mysterious cannon that could "destroy dozens of miles with one shot." As for the髡贼's so-called "iron-clad steamship," it was because the "divine fire iron-clad fort ship" had not been built. Once it was built, the髡贼's iron-clad steamship would be paper-mache—no one believed this, because the drawing of his so-called "divine fire iron-clad fort ship" was actually a large raft with an enemy platform on it, with cannons on all sides, and using sails and eight large oars. Zhang Yu and Zeng Juan both deeply doubted whether this thing could move.
+His few good friends in the community school were happy for him, but they were also a little jealous in their hearts, especially Zeng Juan. His family also ran a small shop, and his family's situation was on par with Zhang Yu's. Now that Zhang Yu's family had made a comeback, his family was still the same old hard-working family, so he inevitably felt unfair. As for Li Ziyu, he was also a little unwilling to have his limelight greatly reduced. He kept talking about the "divine weapons" in the "Wubei Zhi" to prove that the Ming Dynasty was only because "treacherous officials were in power," otherwise, whether it was the kūnzéi's Grand World or Lingao's whatever fort, they were all nothing in front of the mysterious cannon that could "destroy dozens of miles with one shot." As for the kūnzéi's so-called "iron-clad steamship," it was because the "divine fire iron-clad fort ship" had not been built. Once it was built, the kūnzéi's iron-clad steamship would be paper-mache—no one believed this, because the drawing of his so-called "divine fire iron-clad fort ship" was actually a large raft with an enemy platform on it, with cannons on all sides, and using sails and eight large oars. Zhang Yu and Zeng Juan both deeply doubted whether this thing could move.
 
 Chen Shixin no longer came to school. This day, the teacher was on leave again, so the friends went to his house together. When they knocked on the Chen family's door, it was his father who answered.
 
@@ -44,13 +44,13 @@ After inquiring, they learned that this classmate had already gone to Lingao—i
 
 "An Australian took a fancy to his painting, said he painted well, and took him to Lingao to learn painting," his father gestured. "His mother and I discussed it. He is not a material for studying, and he loves to paint. After learning the Westerners' painting skills, he will have a way to make a living."
 
-"Are you at ease?" Li Ziyu said in surprise. "That's the髡贼's territory!"
+"Are you at ease?" Li Ziyu said in surprise. "That's the kūnzéi's territory!"
 
-"Whether it's the髡贼 or the Australians, they are wandering around outside Guangzhou all day long. They are not man-eating monsters. What's there to worry about? I heard that the market in Lingao is not small, and the business may be even better. I want to go and see it in a few days."
+"Whether it's the kūnzéi or the Australians, they are wandering around outside Guangzhou all day long. They are not man-eating monsters. What's there to worry about? I heard that the market in Lingao is not small, and the business may be even better. I want to go and see it in a few days."
 
-After coming out of Chen Shixin's house, the friends were all a little disappointed. Li Ziyu muttered, "He likes the Australians' things the most. It's his wish. But to just join the髡贼..." Zeng Juan, however, felt empty in his heart for some reason: Zhang Yu's family had become rich; Li Ziyu's family was a small gentry family with houses and land, and studying was just to not be illiterate; he still had some sense of superiority over Chen Shixin, but now Chen Shixin had also gone to join the Australians—needless to say, he would definitely be successful in the future. Only he himself, who was not good at literature or martial arts, and whose family's business was not small, felt that his future was bleak for a while, and he was too lazy to respond to Zhang Yu's proposal to watch the newly released Australian film. He muttered, "So what if I join the髡贼? It's better than being suffocated here..."
+After coming out of Chen Shixin's house, the friends were all a little disappointed. Li Ziyu muttered, "He likes the Australians' things the most. It's his wish. But to just join the kūnzéi..." Zeng Juan, however, felt empty in his heart for some reason: Zhang Yu's family had become rich; Li Ziyu's family was a small gentry family with houses and land, and studying was just to not be illiterate; he still had some sense of superiority over Chen Shixin, but now Chen Shixin had also gone to join the Australians—needless to say, he would definitely be successful in the future. Only he himself, who was not good at literature or martial arts, and whose family's business was not small, felt that his future was bleak for a while, and he was too lazy to respond to Zhang Yu's proposal to watch the newly released Australian film. He muttered, "So what if I join the kūnzéi? It's better than being suffocated here..."
 
-Li Ziyu was a little confused, but Zhang Yu knew more or less what his friend was thinking. He comforted him, "There's no need to join the髡贼. Why not go to the Grand World and see if there is any business to be done..."
+Li Ziyu was a little confused, but Zhang Yu knew more or less what his friend was thinking. He comforted him, "There's no need to join the kūnzéi. Why not go to the Grand World and see if there is any business to be done..."
 
 Zeng Juan smiled bitterly, "Brother Zhang, my family runs a shop that sells incense and candles. Except for the wealthy families who burn some incense on weekdays, everyone buys them for worshiping gods. The Grand World doesn't want these things. I've been inside and seen it. There's only a Westerner's church and a new Taoist what-do-you-call-it temple, but they say they don't burn incense." He sighed, "My father said that fortunately the price of spices has dropped a lot now, otherwise this shop would really not be able to continue."
 
