--- a/_posts/2014-11-3-7-08600.md
+++ b/_posts/2014-11-3-7-08600.md
@@ -12,15 +12,15 @@ Of course, "enjoying morning tea" was not just about having a hearty breakfast, 
 
 Speaking of the biggest recent news in Guangzhou, it was undoubtedly that the "Kun" bandits had officially torn off their mask of civility with the imperial court, broken through the city defenses, and appointed a new magistrate surnamed Liu. And as for news about this Magistrate Liu, it was like fish in the Pearl River—you could catch one after another. The excitement over the "know-it-alls" in the teahouses turning red-faced and sputtering with spittle as they discussed major events had not yet faded when an even more explosive piece of news topped it, directly supplanting its predecessor's glorious position. The buzz from a few days ago, about Magistrate Liu swiftly and decisively eliminating the long-standing scourge of the yamen functionaries, hadn't even died down, and today the talk in the teahouses was about something else entirely.
 
-"Hey bosses, have you heard?" a portly man with a genial smile opened the conversation after taking a sip of tea. "These past few days, Chengxuan Avenue... whoa, the whole damn street's been torn down by the short-haired fellas! That Ah Zhu, oh, Boss Zhang, you know him. The owner of Qingyun Noodle Shop, half his house was torn down. He's making a fuss about hanging himself. These bastards, they're really born without assholes!"
+"Hey bosses, have you heard?" a portly man with a genial smile opened the conversation after taking a sip of tea. "These past few days, Chengxuan Avenue... whoa, the whole damn street's been torn down by the kūnzéi fellas! That Ah Zhu, oh, Boss Zhang, you know him. The owner of Qingyun Noodle Shop, half his house was torn down. He's making a fuss about hanging himself. These bastards, they're really born without assholes!"
 
 The crowd nodded in agreement. Only a young man in a blue robe looked at the others, not understanding. Boss Zhang, an old man with a three-stranded beard and a peaceable, business-like air, was the best dressed among them. He spoke to the young man in Mandarin: "He's saying that in the last few days, the Australians have demolished the entire Chengxuan Avenue. The owner of Qingyun Noodle Shop, Zhu... ah, he's a young man I used to mentor. Most of his house was torn down, and he's threatening to hang himself." The young man's face lit up with understanding, and he nodded repeatedly. Boss Zhang then turned back to the fat man and said in Mandarin, "Boss Wang, this is Mr. Li, a sea merchant from Nan-zhi. He's the young master of one of my old establishment's, Yehengxiang's, most valued customers. Please be considerate."
 
 The fat man's face reddened slightly. He stood up, holding his teacup, and said in Mandarin, "My apologies, my apologies. Boss Li, please don't be offended. I'll drink this tea as a substitute for wine and punish myself with a cup." Young Li quickly stood up as well, fumbled on the table for his teacup, and raised it, saying, "Not at all, not at all. I'm new to this esteemed place and will need your guidance, my friend. Another day, I will prepare a proper banquet and invite all you bosses for a drink." The two of them drank to that.
 
-A lean-looking man next to them picked up the conversation, "Did the short-haired fellas get rich? All that business equipment."
+A lean-looking man next to them picked up the conversation, "Did the kūnzéi fellas get rich? All that business equipment."
 
-The fat man wiped his mouth with his sleeve and said, "Not at all! I have a buddy who's a runner for Nanhai County. He said the short-haired fellas piled all the business equipment at the East Training Grounds. You can get it back after paying some kind of fine. And those who dismantled their own stuff three days ago, there was no issue at all."
+The fat man wiped his mouth with his sleeve and said, "Not at all! I have a buddy who's a runner for Nanhai County. He said the kūnzéi fellas piled all the business equipment at the East Training Grounds. You can get it back after paying some kind of fine. And those who dismantled their own stuff three days ago, there was no issue at all."
 
 Boss Zhang stroked his beard and nodded. "To be true to one's word is rare; to be clear in reward and punishment is even rarer."
 
@@ -30,7 +30,7 @@ The lean man sneered, "Rare? Is your buddy just spinning tales? Who knows how mu
 
 "Boss Wang, Ah Niu! Stop arguing! Come, come, have a bun." Boss Zhang hurriedly interjected to smooth things over, placing a char siu bao in each of their bowls. Fa Wen Niu took the opportunity to back down and started eating his bun, but the fat man continued to grumble.
 
-"Boss Li, it's not me, Fatty Shu, who's bragging. If my buddy were a scoundrel like Fa Wen Niu here, causing trouble for his neighbors, he would have been sent to swing on Magistrate Liu's gallows long ago. It's because he's always been a hardworking, good person, living a modest life, that he was kept on. He said that during this whole... uh... 'operation'—oh, that's the short-haired fellas' word—none of them in public service pocketed a single brick or tile. Everything was sealed and sent to the training grounds. Anyone who dared to take anything would be sent to the gallows. They didn't even get a bonus for their hard work. Get rich, get rich, my ass!"
+"Boss Li, it's not me, Fatty Shu, who's bragging. If my buddy were a scoundrel like Fa Wen Niu here, causing trouble for his neighbors, he would have been sent to swing on Magistrate Liu's gallows long ago. It's because he's always been a hardworking, good person, living a modest life, that he was kept on. He said that during this whole... uh... 'operation'—oh, that's the kūnzéi fellas' word—none of them in public service pocketed a single brick or tile. Everything was sealed and sent to the training grounds. Anyone who dared to take anything would be sent to the gallows. They didn't even get a bonus for their hard work. Get rich, get rich, my ass!"
 
 "These Australians do have a new way of doing things," Boss Zhang said, tapping his fingers. "No more customary fees, less extortion, everything by the book, clear rewards and punishments. For us small business owners who rely on our own skills, business is much easier now."
 
@@ -40,9 +40,9 @@ At this painful point, everyone sighed in unison.
 
 As for how long the red flag could fly, not just them, but the entire gentry and populace of Guangzhou Prefecture were in a wait-and-see mode. After all, the imperial court's authority had been long-established, and to these common people, it was an unshakable entity. Although they had no affection for this court that only knew how to extort, if the imperial army arrived, it would surely crush everyone, good and bad alike, into dust. The "Kun" bandits could sail away and escape, but they themselves wouldn't be able to escape even if they grew wings.
 
-"Yeah. Who... ah, sorry, who doesn't know that Fa Wen Niu specializes in selling chicken congee to the short-haired soldiers? I've told him many times not to do business with the short-haired fellas. When the time comes, it's hard to say if we'll die or not, but Fa Wen Niu is definitely a dead man."
+"Yeah. Who... ah, sorry, who doesn't know that Fa Wen Niu specializes in selling chicken congee to the kūnzéi soldiers? I've told him many times not to do business with the kūnzéi fellas. When the time comes, it's hard to say if we'll die or not, but Fa Wen Niu is definitely a dead man."
 
-"What do you know!" Fa Wen Niu was displeased. He put on an arrogant air and rapped the table. "Let me tell you, unless the short-haired fellas leave on their own, with the court's bunch of rotten melons and cracked dates, one short-haired soldier could take on ten of them and still win."
+"What do you know!" Fa Wen Niu was displeased. He put on an arrogant air and rapped the table. "Let me tell you, unless the kūnzéi fellas leave on their own, with the court's bunch of rotten melons and cracked dates, one kūnzéi soldier could take on ten of them and still win."
 
 "You're just bragging!"
 
@@ -50,17 +50,17 @@ As for how long the red flag could fly, not just them, but the entire gentry and
 
 "Of course, you were just a grunt soldier."
 
-"Alright then. You admit I know what I'm talking about, right? Let me tell you, forget about firearms and cannons. Just the fighting spirit of the short-haired soldiers, even the Guanning Army can't compare. The much-vaunted, 'invincible' Eastern Captives are only fit to carry their night-soil pots." Fa Wen Niu unbuttoned his shirt, pointing to a long, centipede-like scar on his stomach. "Fatty Shu! I once followed General He to attack Lin'gao, you think I'd be afraid of a punk like you? During the battle of Shishan, my ten thousand brothers fought a few hundred of them in close combat, and we lost so badly we were left with nothing but our bare asses! They chased us for dozens of miles like we were ducks. I've even been in a 'Kun' bandit's prison, you think you're like me, you bastard? All talk."
+"Alright then. You admit I know what I'm talking about, right? Let me tell you, forget about firearms and cannons. Just the fighting spirit of the kūnzéi soldiers, even the Guanning Army can't compare. The much-vaunted, 'invincible' Eastern Captives are only fit to carry their night-soil pots." Fa Wen Niu unbuttoned his shirt, pointing to a long, centipede-like scar on his stomach. "Fatty Shu! I once followed General He to attack Lin'gao, you think I'd be afraid of a punk like you? During the battle of Shishan, my ten thousand brothers fought a few hundred of them in close combat, and we lost so badly we were left with nothing but our bare asses! They chased us for dozens of miles like we were ducks. I've even been in a 'Kun' bandit's prison, you think you're like me, you bastard? All talk."
 
 The listeners were dumbfounded, trying to imagine the spectacular scene of a few hundred men chasing ten thousand, and they couldn't help but take a sharp breath.
 
 "In that case, the claim that the... Australians are only skilled with firearms, isn't that utterly absurd?" Young Boss Li suddenly felt like a frog in a well.
 
-"Which bastard said that? Even if you pit the short-haired soldiers against the Eastern Captives and forbid them from using muskets and cannons, I'd still bet on the short-haired to win."
+"Which bastard said that? Even if you pit the kūnzéi soldiers against the Eastern Captives and forbid them from using muskets and cannons, I'd still bet on the kūnzéi to win."
 
 "If what Ah Niu says is true, it's not impossible that the Australians will stay in Guangzhou for a long time."
 
-"It's more than that. The short-haired fellas say they are descendants of the Song Dynasty. It wouldn't be surprising if they fought their way back to Kaifeng to become emperor."
+"It's more than that. The kūnzéi fellas say they are descendants of the Song Dynasty. It wouldn't be surprising if they fought their way back to Kaifeng to become emperor."
 
 As they were talking, a series of gongs suddenly sounded from outside. The people in the room fell silent. A waiter from the teahouse hurried out to see what was happening. It was the paifia (local constable) from the Dananmen Gate district, striking his gong. Seeing the waiter, he said, "The army will be passing through the street shortly. Tell everyone not to panic. Those who want to watch the excitement should stand behind the white line. Don't go onto the street, understand?"
 
