--- a/_posts/2014-11-4-7-08700.md
+++ b/_posts/2014-11-4-7-08700.md
@@ -14,7 +14,7 @@ Like most shops in Guangzhou, Zhang Yu's walnut crisp shop had closed for one da
 
 "Special or not is beside the point. The key is that they have the 'golden seal of approval' from the Australians," Boss Zhang said. "And even so, you have to order them several days in advance, otherwise you can't get any."
 
-"I know that old Zhang family's walnut crisp shop. It's a tiny, old place. The quality is just so-so—they sometimes even mix in last year's stale goods with their crisps. Only the teahouses looking for a cheap deal use their stuff... I don't know how they caught the eye of the short-haired fellas."
+"I know that old Zhang family's walnut crisp shop. It's a tiny, old place. The quality is just so-so—they sometimes even mix in last year's stale goods with their crisps. Only the teahouses looking for a cheap deal use their stuff... I don't know how they caught the eye of the kūnzéi fellas."
 
 "I heard the son of Boss Zhang went to the 'Great World' amusement park and became a 'sworn brother' to one of the Australians..."
 
