--- a/_posts/2014-4-25-6-37700.md
+++ b/_posts/2014-4-25-6-37700.md
@@ -10,7 +10,7 @@ The selection group comprised sixty-four students from each grade. From the firs
 
 *"Companions to the crown prince,"* she thought wryly.
 
-"What are you thinking about?" A short-haired girl plopped down on the desk and snatched the earbud from Ziqi's ear, placing it in her own. She was Zhang Yunmi, another Senator's child. Being of a similar age, she and Ziqi were close. "Lend me your PSP when we go back this time."
+"What are you thinking about?" A kūnzéi girl plopped down on the desk and snatched the earbud from Ziqi's ear, placing it in her own. She was Zhang Yunmi, another Senator's child. Being of a similar age, she and Ziqi were close. "Lend me your PSP when we go back this time."
 
 "Are you paying rent?" Ziqi arched an eyebrow.
 
