--- a/_posts/2014-6-6-6-41900.md
+++ b/_posts/2014-6-6-6-41900.md
@@ -82,17 +82,17 @@ The cell door was already open. It was clean inside, without the filth and stenc
 
 "Lin Ming, your case has been clarified," Liu Fuqing said. "Consider yourself lucky. You weren't involved."
 
-Lin Ming was worn down by the relentless interrogation, day and night. Fortunately, the髡贼 (kūnzéi - "髡" refers to an ancient punishment of shaving the head, here used as a derogatory term for the穿越众, "transmigrators") prisons were different from those of the Ming. They were clean, and there were no abusive jailers. After the interrogations ended, he had been allowed to rest for a few days, which helped him recover. Though his spirit was still weak, the words "consider yourself lucky" registered. He felt a jolt and raised his head, saying hesitantly, "You mean..."
+Lin Ming was worn down by the relentless interrogation, day and night. Fortunately, the Ao-Song prisons were different from those of the Ming. They were clean, and there were no abusive jailers. After the interrogations ended, he had been allowed to rest for a few days, which helped him recover. Though his spirit was still weak, the words "consider yourself lucky" registered. He felt a jolt and raised his head, saying hesitantly, "You mean..."
 
 "Yes, you're fine. You're not going to die," Liu Fuqing said with a small smile. "Come with me."
 
 Lin Ming looked at the sunlight outside the window, almost unable to open his eyes. How many days had it been since he'd seen the sun? Since his arrest, he had completely lost track of time. All he saw, day and night, were the ever-burning gas lamps.
 
-The 髡贼's interrogation had been an eye-opener. Perhaps that was a bitter way to put it, for himself. But for the first time, Lin Ming learned that there was a kind of interrogation that didn't involve whips or instruments of torture. Although he knew from the occasional screams he heard that the 髡贼 probably had tortures more terrible than those of the Ming, he had, to his shame, completely broken down during the second round of questioning. He vaguely remembered sobbing, snot and tears streaming down his face, begging the interrogator on the floor to let him close his eyes for a moment.
+The bandits's interrogation had been an eye-opener. Perhaps that was a bitter way to put it, for himself. But for the first time, Lin Ming learned that there was a kind of interrogation that didn't involve whips or instruments of torture. Although he knew from the occasional screams he heard that the Australians probably had tortures more terrible than those of the Ming, he had, to his shame, completely broken down during the second round of questioning. He vaguely remembered sobbing, snot and tears streaming down his face, begging the interrogator on the floor to let him close his eyes for a moment.
 
-What had he confessed? His muddled brain couldn't recall a thing. Probably everything. Even how many wives and concubines he had, and what positions he used with them in bed. For a chance to sleep, he would have told the 髡贼 anything they wanted to know.
+What had he confessed? His muddled brain couldn't recall a thing. Probably everything. Even how many wives and concubines he had, and what positions he used with them in bed. For a chance to sleep, he would have told the Australians anything they wanted to know.
 
-But why were they taking him here now? He knew the 髡贼's laws were extremely harsh. If he had been part of that mysterious colleague's group, he would either be hanged by now or suffering in the dreaded labor camps, slowly "working to death."
+But why were they taking him here now? He knew their laws were extremely harsh. If he had been part of that mysterious colleague's group, he would either be hanged by now or suffering in the dreaded labor camps, slowly "working to death."
 
 Since he was not involved in the case, he could probably escape that terrible fate. But, as a member of the Jinyiwei who had infiltrated Lingao under a false name, he probably wouldn't get off so easily.
 
